--- a/articles/rfi/999972.md
+++ b/articles/rfi/999972.md
@@ -1,5 +1,5 @@
-<!--1713433502000-->
-[安理会决定周五就巴勒斯坦联合国会员资格进行投票 美国泼冷水称无助建国](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240418-%E5%AE%89%E7%90%86%E4%BC%9A%E5%86%B3%E5%AE%9A%E5%91%A8%E4%BA%94%E5%B0%B1%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E8%81%94%E5%90%88%E5%9B%BD%E4%BC%9A%E5%91%98%E8%B5%84%E6%A0%BC%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8-%E7%BE%8E%E5%9B%BD%E6%B3%BC%E5%86%B7%E6%B0%B4%E7%A7%B0%E6%97%A0%E5%8A%A9%E5%BB%BA%E5%9B%BD)
+<!--1713438901000-->
+[所罗门可能的新总理称上台翌日即废止与中国协议](https://www.rfi.fr/cn/%E5%9B%BD%E9%99%85/20240418-%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE)
 ------
 
-<div>18/04/2024 - 10:33</div><img src="https://s.rfi.fr/media/display/5b0f2464-a0fe-11ee-aa95-005056a97e36/w:1280/p:16x9/AP23356622732971.jpg"><p><strong>联合国安理会定于周五就巴勒斯坦获得联合国正式会员资格的请求进行投票。路透社今天报道称，以色列盟友美国预计会阻止此举，因为这实际上将承认巴勒斯坦状态。        </strong></p><div><p>据外交官表示，由 15 名成员组成的理事会将于周五下午 3 点（格林威治标准时间 1900 点）就一项决议草案进行投票，该决议草案建议由 193 名成员组成的联合国大会“接纳巴勒斯坦国为联合国会员国”。</p><p>安理会决议需要至少九票赞成且美国、英国、法国、俄罗斯或中国无否决票才能通过。外交官表示，这项措施可能会得到最多 13 个安理会成员的支持，这将迫使美国使用否决权。</p><p>提出该决议草案的安理会成员阿尔及利亚要求在周四下午进行投票，恰逢安理会届时举行中东问题会议，多位部长将出席会议。</p><p>美国表示，建立独立的巴勒斯坦国应通过各方直接谈判而不是在联合国进行。</p><p>美国驻联合国大使琳达·托马斯·格林菲尔德周三表示：“我们认为，在安理会通过一项决议并不一定能让我们找到向前推进的两国解决方案。”</p><p>巴勒斯坦目前是非会员观察员国，这实际上是对2012年由193个成员国组成的联合国大会授予的国家地位的承认。但成为联合国正式会员国的申请需要得到安理会批准，然后才能成为联合国正式会员国。至</p><p>联合国安理会长期以来一直支持以色列与巴勒斯坦两国在安全和公认的边界内毗邻共存的愿景。巴勒斯坦人希望在西岸、东耶路撒冷和加沙地带建立一个国家，这些领土都是以色列于 1967 年占领的。</p><p>自 20 世纪 90 年代初以色列和巴勒斯坦权力机构签署《奥斯陆协议》以来，在实现巴勒斯坦建国方面进展甚微。</p><p>巴勒斯坦由总统马哈茂德·阿巴斯领导的巴勒斯坦权力机构在西岸行使有限的自治权，并且是以色列《奥斯陆协定》的伙伴。 2007年，哈马斯通过选举将巴勒斯坦权力机构从加沙地带的权力执政赶下台。</p><p>巴勒斯坦争取正式加入联合国正值以色列和哈马斯在加沙爆发战争六个月后，以色列正在被占领的约旦河西岸扩大定居点。</p><p>以色列驻联合国大使埃尔丹周三指责安理会“费时推动建立巴勒斯坦恐怖国家”。埃尔丹说：“如果安理会决定建议巴勒斯坦权力机构成为正式成员，巴勒斯坦权力机构煽动和资助恐怖主义，对巴勒斯坦领土却没有控制权，它将失去所有合法性。”</p><p>安理会接纳新成员委员会由所有 15 个安理会成员组成，上周举行了两次会议讨论巴勒斯坦的申请，并于周二同意了一份有关该问题的报告。报告称，“关于申请是否符合所有入会标准的问题……委员会无法向安理会提出一致建议”，并说“表达有不同意见”。</p><p>联合国会员国向接受《联合国宪章》规定的义务并有能力并愿意履行这些义务的“爱好和平的国家”开放。</p><p>美国特使昨天警告称，正式成为联合国会员国无助于巴勒斯坦建国。</p><p>美国驻联合国大使格林菲尔德周三表示，她没有看到联合国决议建议巴勒斯坦权力机构成为联合国正式会员国，以帮助实现以色列-巴勒斯坦问题的两国冲突解决方案。</p><p>但她说，美国总统拜登已明确表示华盛顿支持两国解决方案，并正在实地努力尽快落实这一方案。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWkz.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240418-%25E5%25AE%2589%25E7%2590%2586%25E4%25BC%259A%25E5%2586%25B3%25E5%25AE%259A%25E5%2591%25A8%25E4%25BA%2594%25E5%25B0%25B1%25E5%25B7%25B4%25E5%258B%2592%25E6%2596%25AF%25E5%259D%25A6%25E8%2581%2594%25E5%2590%2588%25E5%259B%25BD%25E4%25BC%259A%25E5%2591%2598%25E8%25B5%2584%25E6%25A0%25BC%25E8%25BF%259B%25E8%25A1%258C%25E6%258A%2595%25E7%25A5%25A8-%25E7%25BE%258E%25E5%259B%25BD%25E6%25B3%25BC%25E5%2586%25B7%25E6%25B0%25B4%25E7%25A7%25B0%25E6%2597%25A0%25E5%258A%25A9%25E5%25BB%25BA%25E5%259B%25BD&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%AE%89%E7%90%86%E4%BC%9A%E5%86%B3%E5%AE%9A%E5%91%A8%E4%BA%94%E5%B0%B1%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E8%81%94%E5%90%88%E5%9B%BD%E4%BC%9A%E5%91%98%E8%B5%84%E6%A0%BC%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8%20%E7%BE%8E%E5%9B%BD%E6%B3%BC%E5%86%B7%E6%B0%B4%E7%A7%B0%E6%97%A0%E5%8A%A9%E5%BB%BA%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWkz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%AE%89%E7%90%86%E4%BC%9A%E5%86%B3%E5%AE%9A%E5%91%A8%E4%BA%94%E5%B0%B1%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E8%81%94%E5%90%88%E5%9B%BD%E4%BC%9A%E5%91%98%E8%B5%84%E6%A0%BC%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8%20%E7%BE%8E%E5%9B%BD%E6%B3%BC%E5%86%B7%E6%B0%B4%E7%A7%B0%E6%97%A0%E5%8A%A9%E5%BB%BA%E5%9B%BD%20-%20https%3A%2F%2Frfi.my%2FAWkz.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWkz.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%AE%89%E7%90%86%E4%BC%9A%E5%86%B3%E5%AE%9A%E5%91%A8%E4%BA%94%E5%B0%B1%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E8%81%94%E5%90%88%E5%9B%BD%E4%BC%9A%E5%91%98%E8%B5%84%E6%A0%BC%E8%BF%9B%E8%A1%8C%E6%8A%95%E7%A5%A8%20%E7%BE%8E%E5%9B%BD%E6%B3%BC%E5%86%B7%E6%B0%B4%E7%A7%B0%E6%97%A0%E5%8A%A9%E5%BB%BA%E5%9B%BD&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 11:05</div><img src="https://s.rfi.fr/media/display/de2f9c94-4be4-11ee-8348-005056bfb2b6/w:1280/p:16x9/Le%20port%20international%20d%27Honiara%2C%20capitale%20des%20%C3%AEles%20Salomon.JPG"><p><strong>所罗门群岛总理一职的主要候选人之一今天承诺，在可能影响该国选举的第二天，如果他上台，就废除这个太平洋小国与中国签订的地区安全协定。法新社说，中国官方媒体暗示，美国可能会策划骚乱，以阻止即将卸任的领导人重新掌权。        </strong></p><div><p>所罗门群岛总理一职的主要候选人之一，彼得·凯尼洛雷亚在马莱塔岛的村庄告诉法新社，“如果我们掌权，我们将废除与中国的安全条约。我们认为这个条约对所罗门群岛没有好处。”</p><p>周三所罗门群岛选举后，计票工作正在进行，该选举必须更新议会并选举总理，这一过程可能需要一些时间。</p><p>在这个拥有约 72 万居民、遍布数百个火山岛屿和环礁的小国举行的这次选举正受到密切关注，因为它对太平洋安全局势会有预期影响。</p><p>所罗门群岛现在的总理玛纳西·索加瓦雷 (Manasseh Sogavare) 领导所罗门群岛进入中国的轨道，并于 2022 年与北京签署了安全协议。尽管该协议的细节仍不清楚，但美国和澳大利亚担心它将为中国在南太平洋建立永久性军事基地奠定基础，这可能会改变地区安全的国际规则。</p><p>即将卸任的领导人承诺，如果再次当选，将加强与中国的关系，但他的反对者担心北京对所罗门群岛的影响，并主张与澳大利亚或美国等传统伙伴重建关系。</p><p>凯尼洛雷亚说，“我们没有天敌。” 他并对所罗门群岛已成为世界上两个最大的军事和经济大国——中国和美国——之间的争论焦点表示遗憾。他指出，“这让我们因错误的原因而臭名远扬。我们真的不需要在这里挑起不必要的紧张局势。”</p><p>据法新社今天报道称，在由身穿制服的斐济士兵和澳大利亚警察组成的国际小组的监视下，选票被卡车运送到首都霍尼亚拉一个高度保护的计票中心，这是投票面临压力的迹象。</p><p>中国官方媒体暗示，美国可能会策划骚乱，以阻止即将卸任的领导人重新掌权。美国大使安·玛丽·亚斯蒂休克称这些谣言是“公然的欺骗”。 她在一份声明中表示，“我们强烈反驳知名宣传机构关于美国国际开发署和美国政府试图影响选举的指控”。</p><p>卸任总理索加瓦雷的主要竞争对手是前联合国律师彼得·凯尼洛雷亚、人权活动家马修·韦尔和前总理经济学家戈登·达西·利洛。</p><p>然而，所罗门群岛可能要几周时间才认识他们的新总理。</p><p>选民并不直接选择他们的领导人。 他们选出代表，进行闭门谈判，组成联盟并选出领导人，这一过程可能会持续数周。</p><p>据负责选举的官员贾斯珀·阿尼西 (Jasper Anisi) 称，投票后第二天，所罗门局势平静。他说，“一切都很和平。”</p><p>所罗门之前的选举经常导致暴力。</p><p>2000年，总理巴特·乌卢法阿鲁在被心怀不满的枪手绑架后被迫辞职。</p><p>2006年，国际维和部队被部署平息选举后的暴力事件，总理斯奈德·里尼在仅仅八天后就被赶下台。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%259B%25BD%25E9%2599%2585%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E5%258F%25AF%25E8%2583%25BD%25E7%259A%2584%25E6%2596%25B0%25E6%2580%25BB%25E7%2590%2586%25E7%25A7%25B0%25E4%25B8%258A%25E5%258F%25B0%25E7%25BF%258C%25E6%2597%25A5%25E5%258D%25B3%25E5%25BA%259F%25E6%25AD%25A2%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E5%258D%258F%25E8%25AE%25AE&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E5%8F%AF%E8%83%BD%E7%9A%84%E6%96%B0%E6%80%BB%E7%90%86%E7%A7%B0%E4%B8%8A%E5%8F%B0%E7%BF%8C%E6%97%A5%E5%8D%B3%E5%BA%9F%E6%AD%A2%E4%B8%8E%E4%B8%AD%E5%9B%BD%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
