--- a/articles/rfi/999950.md
+++ b/articles/rfi/999950.md
@@ -1,5 +1,5 @@
-<!--1713494701000-->
-[所罗门群岛反对派总理角逐者重申若当选将废除与中国的安全协议](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240418-%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE)
+<!--1713498301000-->
+[赖清德5.20前 台湾国民党议员前赴后继去中国表“善意”但拆台](https://www.rfi.fr/cn/%E5%8F%B0%E6%B9%BE/20240418-%E8%B5%96%E6%B8%85%E5%BE%B75-20%E5%89%8D-%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8-%E5%96%84%E6%84%8F-%E4%BD%86%E6%8B%86%E5%8F%B0)
 ------
 
-<div>18/04/2024 - 22:49</div><img src="https://s.rfi.fr/media/display/a21e0674-fcaf-11ee-8e20-005056bfb2b6/w:1280/p:16x9/AP24106049916145.jpg"><p><strong></strong></p><div><p>中国资助了多个重大项目，包括一座可容纳一万个座位的体育场和一座仍在建设中的医疗中心。</p><p>61 岁的罗伯特·巴拉 (Robert Bara) 住在首都附近一个泥泞的山谷里的村庄里，他担心没有足够的钱送孩子们上学。 他在前往一座用作投票站的教堂投票时说道：“我必须在经济上支持他们”。</p><p>组织这样的投票对这个群岛来说是一个挑战，这个拥有约 72 万居民的国家分布在数百个火山岛屿和环礁上，投票箱和选票是通过船只、飞机和直升机运送的。</p><p>来自澳大利亚、新西兰和巴布亚新几内亚的警察协助当地执法。</p><p>为了应对可能发生的暴力事件，位于霍尼亚拉市中心的中国大使馆本周在大楼前匆忙竖起了临时钢栅栏。</p><p>这是所罗门群岛自2019年与台湾断绝外交关系以来的首次选举。</p><p>所罗门群岛在总理玛纳西·索加瓦雷 (Manasseh Sogavare) 2019年上台，将所罗门群岛的外交关系从台湾转向北京。索加瓦雷于 2022 年与北京签署了一项秘密安全协议。</p><p>尽管该协议的细节仍不清楚，但华盛顿和堪培拉担心它将为中国在南太平洋建立永久性军事基地奠定基础，这可能会改变地区安全的游戏规则。</p><p>玛纳西·索加瓦雷的主要竞争对手之一是前联合国律师彼得·凯尼洛里，他希望挑战与中国的协议。 其他反对派人物包括人权活动家马修·韦尔和前总理、经济学家戈登·达西·利洛。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt8.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240418-%25E6%2589%2580%25E7%25BD%2597%25E9%2597%25A8%25E7%25BE%25A4%25E5%25B2%259B%25E5%258F%258D%25E5%25AF%25B9%25E6%25B4%25BE%25E6%2580%25BB%25E7%2590%2586%25E8%25A7%2592%25E9%2580%2590%25E8%2580%2585%25E9%2587%258D%25E7%2594%25B3%25E8%258B%25A5%25E5%25BD%2593%25E9%2580%2589%25E5%25B0%2586%25E5%25BA%259F%25E9%2599%25A4%25E4%25B8%258E%25E4%25B8%25AD%25E5%259B%25BD%25E7%259A%2584%25E5%25AE%2589%25E5%2585%25A8%25E5%258D%258F%25E8%25AE%25AE&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWt8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE%20-%20https%3A%2F%2Frfi.my%2FAWt8.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt8.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%89%80%E7%BD%97%E9%97%A8%E7%BE%A4%E5%B2%9B%E5%8F%8D%E5%AF%B9%E6%B4%BE%E6%80%BB%E7%90%86%E8%A7%92%E9%80%90%E8%80%85%E9%87%8D%E7%94%B3%E8%8B%A5%E5%BD%93%E9%80%89%E5%B0%86%E5%BA%9F%E9%99%A4%E4%B8%8E%E4%B8%AD%E5%9B%BD%E7%9A%84%E5%AE%89%E5%85%A8%E5%8D%8F%E8%AE%AE&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 16:56</div><img src="https://s.rfi.fr/media/display/218be9b6-5261-11ee-b729-005056a90321/w:1280/p:16x9/AP23235304939235.jpg"><p><strong>台湾各种立场媒体均聚焦国民党立委傅崐萁将率领党内立委访问中国，该团人数透露为20人。此前，台湾立法院国民党团被抓包作弊匿名顶替不在场议员卢县一投票，曝出卢县一当天人在中国秘密行踪。再此前，消息传台湾立法院长国民党人韩国瑜被邀请组团前往中国访问。再再此前，多家消息称，马英九后台湾另一国民党政治大佬或要访问中国。这些互动被冠以民间善意促进沟通。但此善意也被怀疑是对赖清德5.20任职拆台破坏，吃里扒外。        </strong></p><div><p>据上报消息，国民党立委傅崐萁将率领党内立委访问中国，国民党文传会主委李彦秀昨天表示此行程由傅崐萁个人规划并安排，不过国民党今天（18日）澄清，傅崐萁等人访中行程将针对台湾人民关心的两岸民生经济议题，进行充分沟通与交流，并反映多数台湾民意期望两岸和平交流的心声，维系两岸人民的利益与福祉。</p><p>国民党指出，傅崐萁于今年2月开始联系访中事宜，国民党乐见国会同志肩负起维系两岸民间良善对话的责任，也对于台湾人民关心的农渔产品行销、旅游观光等民生经济议题，与对岸进行协调与讨论，期望达到让两岸人民互惠双赢的目标。</p><p>据国民党强调，向来支持与对岸维系正常公开的交流与沟通，相信唯有增进两岸良性互动与累积善意，才能让台海免于战争的危险边缘，促进区域的和平稳定。</p><p>据新头壳消息，台湾立法院司法及法制委员会今天并案审查《刑法》加重虐童刑责等10案，邀请蔡碧仲等人列席报告并备质询。吴思瑶质询提问，上周五在立院表决时发生投票舞弊事件，当天卢县一出访中国，未至立院出席、签到，却有表决纪录；若此案进入地检署侦查或法院审理，应该会请相关当事人过去询问，包括议事人员、涉及立委等。</p><p>台湾没有消息提及卢县一前往中国事宜。是公干还是私事，一无所知。</p><p>据新头壳稍早消息，继马习二会后，中国再度出招？据媒体透露，北京当局除了规划由国民党团总召傅崐萁组团访中后，在立院8月休会时，将邀请立法院长韩国瑜组团出访，将由中国人大委员长赵乐际亲自接待。</p><p>国民党立院党团总召傅崐萁近日将率20多名蓝委访问中国，由于时程仍在立院开议期间，遭外界批评是“薪水小偷”，国民党中央日前记者会更切割，强调行程内容党中央并不知情。</p><p>民进党团干事长吴思瑶进一步说好奇，责问傅崐萁这次带队率领蓝委去中国，到底是谁的授权？又是代表谁？</p><p>台湾媒体没有提及国民党议员前往中国是受国台办还是受中国人大邀请。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWq1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E5%258F%25B0%25E6%25B9%25BE%2F20240418-%25E8%25B5%2596%25E6%25B8%2585%25E5%25BE%25B75-20%25E5%2589%258D-%25E5%258F%25B0%25E6%25B9%25BE%25E5%259B%25BD%25E6%25B0%2591%25E5%2585%259A%25E8%25AE%25AE%25E5%2591%2598%25E5%2589%258D%25E8%25B5%25B4%25E5%2590%258E%25E7%25BB%25A7%25E5%258E%25BB%25E4%25B8%25AD%25E5%259B%25BD%25E8%25A1%25A8-%25E5%2596%2584%25E6%2584%258F-%25E4%25BD%2586%25E6%258B%2586%25E5%258F%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0%20-%20https%3A%2F%2Frfi.my%2FAWq1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0%20-%20https%3A%2F%2Frfi.my%2FAWq1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWq1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%B5%96%E6%B8%85%E5%BE%B75.20%E5%89%8D%20%E5%8F%B0%E6%B9%BE%E5%9B%BD%E6%B0%91%E5%85%9A%E8%AE%AE%E5%91%98%E5%89%8D%E8%B5%B4%E5%90%8E%E7%BB%A7%E5%8E%BB%E4%B8%AD%E5%9B%BD%E8%A1%A8%E2%80%9C%E5%96%84%E6%84%8F%E2%80%9D%E4%BD%86%E6%8B%86%E5%8F%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
