--- a/articles/rfi/999955.md
+++ b/articles/rfi/999955.md
@@ -1,5 +1,5 @@
-<!--1713476702000-->
-[中美贸易战阴云乱 台美贸易谈判向前看 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240418-%E4%B8%AD%E7%BE%8E%E8%B4%B8%E6%98%93%E6%88%98%E9%98%B4%E4%BA%91%E4%B9%B1-%E5%8F%B0%E7%BE%8E%E8%B4%B8%E6%98%93%E8%B0%88%E5%88%A4%E5%90%91%E5%89%8D%E7%9C%8B)
+<!--1713476703000-->
+[英国称要限制对中国投资](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84)
 ------
 
-<div>18/04/2024 - 21:21</div><img src="https://s.rfi.fr/media/display/da2a9e26-fb17-11ea-875a-005056bff430/w:1280/p:16x9/2020-09-20T073526Z_1670149232_RC272J9D8GQZ_RTRMADP_3_TAIWAN-JAPAN-CHINA.JPG"><p><strong>针对美国政府计划将中国钢铝产品的关税提高百分之二十五，中国商务部4月18日批评美方“转嫁矛盾”的做法是“一错再错”。中美贸易战火药味又一次散布全球之时，台美间的贸易谈判却前景乐观，且一直按部就班地向前发展。                    </strong></p><div><p>美国总统拜登17日向美国钢铁工人联合会（United Steelworkers）会员发表演讲，批评中国政府高额大量补贴，导致中国以不公平的低价向全球市场倾销远超过自身需求的钢铁。 他批评，早在2000年代初，宾州及俄亥俄州的钢铁产业就因此受到严重打击。 拜登指出，美国贸易代表戴琪（Katherine Tai）正在调查中国政府在钢铁和铝方面的贸易行为，如果证实有反竞争的情形，他会敦促戴琪将中国钢、铝税率提高到25%， 而目前这些产品的关税仅有7.5%，或根本不加征关税。</p><p><strong>中国商务部批美错上加错</strong></p><p>中国商务部官网18日晚以不具名的发言人名义，就此事回应称，美方对中国的指责“没有事实依据”，相关措施是典型的“单边主义、保护主义”做法，中方对此坚决反对。 发言人说，2018年以来，美国以“国家安全”之名，对全球贸易伙伴钢铝产品选择性加征关税，还以此胁迫贸易伙伴接受不公平条件。 美方相关措施已被世贸组织裁定违反世贸规则。</p><p>中国商务部发言人声称，美方无视国际经贸秩序和规则，将经贸问题政治化，“滥用所谓301关税复审程序，公开要求随意调整对中国产品关税，转嫁矛盾，是一错再错，也无助 于解决美国内产业面临的问题”。 美国施压别国限制中国产品，更将破坏全球产业链供应链的安全稳定。</p><p>该发言人表示，中方敦促美方正视自身问题，停止提高对中国产品关税，并立即取消对中国加征关税措施。 中方将采取一切必要措施，捍卫自身权益。</p><p><strong>台美贸易谈判向前看</strong></p><p>当中国大陆面临与美国的又一次贸易战阴云的时候，台湾与美国的经贸关系不断稳步向前。</p><p>台美去年6月在华盛顿签署了21世纪贸易倡议首批协定，涵盖关务行政及贸易便捷化、良好法制作业、服务业国内规章、反贪腐、中小企业等5项议题。第二阶段谈判将聚焦农业、劳动与环境3大议题，作业持续进行中。</p><p>美国贸易代表署应美国国会的要求公开了谈判3大议题的拟议文本，内容涉及食品安全、环境正义及远洋移工权益。美方建议提升农产品进口许可程序及认证要求的透明度，也要提高环境保护水准和移工劳权等领域议题。但这些都是双方讨论过程中有共识，或早已是台湾目标愿景。 比如，美方关心远洋渔船上的工作条件，台湾在渔业与人权行动计画（Action Plan for Fisheries and Human Rights）中也有相关规范。</p><p>台湾谈判官员认为，台美21世纪贸易倡议第二阶段谈判整体方向没有问题，正持续分组、分议题密集举行会前会，只是内容牵涉细节法规，必须一步步往前，需要一定时间，未来实体谈判将在台湾举行，但时间未定。</p><p><strong>台美 台英 台加三项贸易投资协议</strong></p><p>过去台湾只与新加坡、新西兰和有关邦交国之间存在自由贸易协定，数量偏低并在国际贸易整合上处境孤立。但继去年6月“台美21世纪贸易倡议”（U.S.-Taiwan Initiative on 21st-Century Trade）首批协定签署后，台湾去年11月与英国签署“深化贸易伙伴关系协议”（Enhanced Trade Partnership Arrangement）， 去年12月则与加拿大签署“投资促进及保障协议”（Foreign Investment Promotion and Protection Arrangement）。</p><p>台湾方面认为：如果台美避免双重课税协定也能完成，将对台美双边经贸打下更坚定基础。台湾也希望强化与澳洲和印度的贸易伙伴关系，因为印度和台湾具备持续推动贸易协议的基础。台湾投资将有助印度发展其制造业基础设施。印度正与中国竞争全球制造中心的地位，对台湾来说，这代表有加强 商业合作的机会。</p><p><strong>蔡英文期望：未来台湾能加入跨太平洋伙伴全面进步协定（CPTPP）</strong></p><p>今年3月7日，台湾总统蔡英文出席任内最后一次外交部新春联欢晚会时表示：过去8年政府积极改善基础建设、厚植国力，吸引外商投资台湾，协助产业布局全球，台湾与美国、日本、欧洲及新南向国家的经贸往来大幅成长。</p><p>她也特别指出：去年完成了签署台美21世纪贸易倡议首批协定，也和英国、加拿大分别签署提升贸易伙伴关系协议及投资促进及保障协议。她期待：未来台湾能加入跨太平洋伙伴全面进步协定（CPTPP） ，继续加强与全球经贸连结。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div>
+<div>18/04/2024 - 14:07</div><img src="https://s.rfi.fr/media/display/65e6582a-fac9-11ed-a60a-005056a90321/w:1280/p:16x9/000_33EF3VR.jpg"><p><strong>英国首相苏纳克(Rishi Sunak)政府将推出一揽子措施，加大对中国贸易和投资的限制。苏纳克的最高副手警告称，英国的开放经济面临前所未有的威胁。        </strong></p><div><p>据POLITICO今天报道称，英国暗示可能在“降低风险”的推动下限制中国投资。这些措施在一定程度上兑现了苏纳克向美国总统拜登做出的承诺。</p><p>英国副首相奥利弗·道登应于周四今天在伦敦举行的一次具有里程碑意义的演讲中宣布该计划，他在演讲中表示，在冷战以来地缘政治紧张程度最高的情况下，英国必须“清醒地”认识到英国经济面临的威胁。道登将表示，英国面临“我们的自由、繁荣和安全之间的谨慎平衡”。</p><p>但他说，虽然“我们不会与全球经济脱钩”，但英国“必须通过收紧出口管制和海外投资来降低风险”，这些投资可能为中国等战略竞争对手的技术提供资金。</p><p>道登在演讲前对《Politico》杂志表示，英国“需要留意”对外投资，“这些投资正在被用来促进、支持和帮助对手的战略提升”。</p><p>但他也说，在境外投资方面，“对我来说，施加任何形式的限制都有很高的门槛。”虽然英国历史上的开放性一直是一个优势，但“我们必须清醒地认识到，我们体系的一大优势也带来了漏洞。”</p><p>英国采取上述举措之前，拜登于去年八月签署了一项行政命令，限制半导体、人工智能和量子等战略领域的对外投资。</p><p>一项调查显示，苏纳克六月访问白宫，期间他“承诺”英国建立对外投资审查制度，能够“评估投资带来的潜在国家安全风险”由 POLITICO 发布，并在商业和贸易部访问后不久分发给企业。</p><p>道登目前正在指示该部门改善对中国等战略竞争对手的新兴技术的出口管制，并组建一个新团队来分析英国政府从对外投资风险调查中获得的数据。</p><p>道登表示，这是他一直与英国盟友一起“努力解决”的问题。他说，英国拥有价值约 13 万亿英镑的外部投资股票。 “这为英国创造了价值数千亿英镑的收入，因此这对我们来说非常有价值。”</p><p>道登表示，政府希望利用《国家安全与投资法案》来筛选对英国的外国直接投资，而不是建立一个新制度，以遏制资金流向中国等战略竞争对手的敏感技术。</p><p>它将就投资何时可能提示风险发布进一步指导，并就添加涵盖关键矿物和半导体的新类别进行磋商。</p><p>与此同时，道登将宣布将对流入英国的交易的强制性报告要求进行修改，并提供“少量有针对性的豁免”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWnm.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E8%258B%25B1%25E5%259B%25BD%25E7%25A7%25B0%25E8%25A6%2581%25E9%2599%2590%25E5%2588%25B6%25E5%25AF%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E6%258A%2595%25E8%25B5%2584&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84%20-%20https%3A%2F%2Frfi.my%2FAWnm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84%20-%20https%3A%2F%2Frfi.my%2FAWnm.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWnm.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8B%B1%E5%9B%BD%E7%A7%B0%E8%A6%81%E9%99%90%E5%88%B6%E5%AF%B9%E4%B8%AD%E5%9B%BD%E6%8A%95%E8%B5%84&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
