--- a/articles/rfi/999963.md
+++ b/articles/rfi/999963.md
@@ -1,5 +1,5 @@
 <!--1713444302000-->
-[法国总理阿塔尔上任一百天了 政绩如何？ - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240418-%E6%B3%95%E5%9B%BD%E6%80%BB%E7%90%86%E9%98%BF%E5%A1%94%E5%B0%94%E4%B8%8A%E4%BB%BB%E4%B8%80%E7%99%BE%E5%A4%A9%E4%BA%86-%E6%94%BF%E7%BB%A9%E5%A6%82%E4%BD%95)
+[拜登昨晚大批中国钢铁排外与作弊 发言人林剑今早冷问是否说美国自己](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A-%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1)
 ------
 
-<div>18/04/2024 - 14:03</div><img src="https://s.rfi.fr/media/display/b0a32400-f006-11ee-8629-005056a90284/w:1280/p:16x9/2024-03-27T202323Z_336472124_RC2OP6A8S2QK_RTRMADP_3_FRANCE-UNEMPLOYMENT-ATTAL.JPG"><p><strong>周四（4月18号）是法国总理加布里埃尔-阿塔尔被任命100天，各报均对这个主题有大幅报道和分析。根据咨询公司Odoxa-Backbone Consulting 为《费加罗报》所做的最新民意调查，法国人虽然对总理的行为持批评态度，但对他的个人魅力表示认可。                    </strong></p><div><p>根据这份民调， 48%的法国人认为他是一位好总理，但他的形象在多个方面都在下滑：68%的法国人认为他充满活力，下降两个百分点，但认为他有魅力或贴近民众关切的人分别为45%和44%, 均有所下降。</p><p>在他入职后的总政策演讲中，新总理曾定下了基调：包括"重塑法国"、"取消对员工的补贴"、创造住房 "供应冲击"、"去行政官僚化"......在抵达马蒂尼翁一百天后，现在到了阿塔尔做一个小总结的时候了。各报自然对他的政策亮点进行了点评和期望。</p><p><strong>青年暴力和教育问题</strong></p><p>右翼《费加罗报》指出，加布里埃尔-阿塔尔（Gabriel Attal）希望在本周四纪念他上任100天之际，利用他在马蒂尼翁的权威，他要前往埃松省（Essonne）的维利-沙蒂永（Viri-Châtillon），之所以选择这个城市，是因为十天前在该市的一个中学校门口，发生了一名15岁的少年被人殴打致死而震惊法国舆论的惨案。阿塔尔将发表题为"“关于共和国核心权力”的演讲，试图消除人们的疑虑。但尽管这位前教育部长似乎曾带来了典范式的转变，但在世俗主义受到质疑的背景下，青少年暴力事件数量仍在令人担忧地增加。</p><p>左翼《解放报》指出，自1月9日上任以来，总理一直在应对动荡的预算形势和国民议会中脆弱的相对多数。为了坚持自己的立场，政府首脑寄希望于恢复权威，尤其是在青年和教育问题上。</p><p>《费加罗报》指出，糟糕的政府政绩和公共财政的急剧恶化，正在为他作为政府首脑的第一步成果蒙上阴影，尽管在这些问题上，他此前的声望一直很高。阿塔尔意识到自己在国民议会中并不占绝对多数，因此自上任以来一直没有提交任何重要立法。这让他的一些部下感到不耐烦，一些人呼吁 "重新启动立法机器"。为了回应对总理言行不一的指责，各部长办公室于周二晚间接到指示，要求他们准备视觉资料，在社交网络上列出总理的成就。</p><p><strong>空洞的一百天</strong></p><p>《解放报》的一篇评论更指出，加布里埃尔-阿塔尔在总理府的一百天，是空洞的一百天：既不左，也不由，什么都不是。总统马克龙的第四任总理上任三个月后，其沟通方式虽然花样多但均短视。作者认为这是马克龙主义没有指南针的表现。如果相信阿塔尔的演讲和他的执政艺术，那么他的逻辑应该是努力与右派共同执政，以获得绝对多数。但是，如果没有事先达成的政治协议，没有足够自信的道德或个人权威，阿塔尔将一事无成。他甚至无法在欧洲大选中为复兴党推出名单开展有效的竞选活动。他的出现只不过是作为一种回应的尝试，旨在对抗在欧洲议会选举上占据投票意向领先的极右翼国民联盟的带头人巴尔德拉（Jordan Bardella<em> ) </em>的效应。</p><p>这篇充满批评语气的文章最后写道：没有多数，没有权威，没有明确的政治定位，没有改革计划来安排未来几个月的工作，阿塔尔除了努力避免错过奥运会的组织工作，以及带着矛盾的双重目标：既不吓唬评级机构，以免我们的债务利率飙升，又不冒社会危机的风险，很难看出他还有什么作用。在欧洲大选可能失败后，这样一个政治团队如何能够团结一致？</p><p><strong>欧洲议会选举的挑战</strong></p><p>对于加布里埃尔-阿塔尔的政治未来，右派的《费加罗报》似乎也不看好，指出，他最坏的打算是什么？在马蒂尼翁的日子不会长久，而议会提出谴责动议的可能性正日益激化右翼队伍，并可能拉拢左翼和新军。总理深知这一点：从 7 月 9 日起，即欧洲大选一个月后，也就是他上任六个月后，国家元首必须按照传统授予他国家功勋大十字勋章。那么，至少他还有一百天的任期。</p><p>经济类报纸《回声报》同一主题指出，在总理府马提翁执政一百天后，加布里埃尔-阿塔尔着手解决 "权力削弱 "问题。周四的讲话要回应公众对安全的强烈要求。马克龙总统在奥林匹克运动会开幕前一百天，就法国人关心的另一个问题--奥林匹克运动会的安全问题作出了保证。</p><p>该报指出，面对极右翼的国民联盟的攻势，执政党多数派仍未找到扭转趋势的良方。妖魔化不再奏效，谴责国民联盟议员在欧洲议会的记录或审查他们的提案也不再奏效。根据《回声报》（Les Echos）和 古典广播电台（Radio classique）委托进行的 EuroTrack 民意调查，对安全问题讨论的支持率正在上升，在本次议会大选中位列第三，仅次于购买力和物价上涨议题。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%89%BE%E7%B1%B3/" title="艾米">艾米</a></div></div></div></div>
+<div>18/04/2024 - 10:19</div><img src="https://s.rfi.fr/media/display/de4dac9c-fa86-11ee-8398-005056bfb2b6/w:1280/p:16x9/AP24103786777136.jpg"><p><strong>周四，中国今天指责美国总统拜登虚伪。美国总统拜登昨天在美国匹兹堡发表讲话指责中国当局在全球“钢铁”贸易中“排外”和“作弊”。 中国外交部发言人林剑今天回应称，“我想问拜登，你说的是中国还是美国？”        </strong></p><div><p>美国总统拜登昨天宣布，他希望将来自中国的钢铁和铝的关税提高两倍。法新社称，这是拜登试图吸引美国工人阶级的政治选票。拜登开始一个星期的在宾夕法尼亚州竞选宣传活动。</p><p>这位民主党人指责北京在全球钢铁贸易中“作弊”，损害了美国制造商及其工人的利益，美国制造商及其雇员是11月总统选举的关键选民，除非有任何意外，他将在这次选举中面对他的竞争对手特朗普。</p><p>拜登指控中国说，“他们仇外。” 这位民主党人感叹中国钢铁企业“不必担心盈利问题，因为中国政府对它们提供大量补贴”。拜登称，“他们不是在竞争，而是在作弊，我们已经在美国看到了这种损害。”</p><p>拜登自称是美国工人最好盟友。拜登说，“我不是在寻求与中国对抗，我想要竞争，而是公平竞争。”</p><p>拜登还进一步澄清，他保证不会与北京发生“贸易战”。</p><p>美国工会和雇主一致对这些保护主义措施表示欢迎。美国钢铁工人联合会（USW）感谢他为捍卫美国的钢铁而采取的“积极”行动。该工会上个月宣布支持民主党参加11月大选，指责拜登的对手特朗普“剥夺工人权利”，尽管特朗普也自称是美国制造业复兴的捍卫者。</p><p>法新社说，自 1990 年以来，宾夕法尼亚州已经失去了超过 40% 的制造业工作岗位，宾夕法尼亚州是美国工业的历史中心，也是可能在 11 月左右选举结果的六个关键州之一。</p><p>总部位于该州的美国钢铁巨头美国钢铁公司表示“赞赏”乔·拜登的声明，该行业的雇主组织也持这一立场。 这位民主党人周三还重申反对日本新日铁公司收购美国公司。</p><p>周二的前一天，拜登从家乡斯克兰顿呼吁为最富有的人增加税收，这与特朗普竞选立场形成鲜明对比。 周三，特朗普陷入非常忙碌，因为他在纽约忙碌的应对审判。</p><p>民主党目前的竞选活动，主要关注宾夕法尼亚州及其白人工人选民。</p><p>特朗普谴责拜登对他的不实指控。特朗普长期以来一直为增加对中国的关税辩护，他的竞选团队周三谴责了民主党及时改变主意。共和党指责“拜登的整个职业生涯都在背叛美国工人，”共和党发言人在一份声明中写道，拜登周三宣布的措施“太软弱，而且来得太晚”。</p><p>拜登周三还呼吁其贸易代表（USTR）“考虑将目前的关税提高两倍”，对进口到美国的部分钢铁和中国铝征收平均7.5%的关税。拜登政府还宣布对中国在“造船、航运和物流领域”的措施进行调查。</p><p>据法新社称，北京迅速谴责“不实指控”。中国商务部称，美国的调查“错误地将正常的贸易和投资活动解释为损害国家安全和美国企业的利益”。 美国“指责中国应对其自身的工业问题负责”。</p><p>尽管两国重新启动了对话，但美国的声明是在与中国激烈竞争的背景下做出的。当被问及这些声明是否会危及他试图与中国国家主席习近平维持的关系时，拜登回答说“不会”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWki.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E6%258B%259C%25E7%2599%25BB%25E6%2598%25A8%25E6%2599%259A%25E5%25A4%25A7%25E6%2589%25B9%25E4%25B8%25AD%25E5%259B%25BD%25E6%258E%2592%25E5%25A4%2596%25E4%25B8%258E%25E4%25BD%259C%25E5%25BC%258A-%25E5%258F%2591%25E8%25A8%2580%25E4%25BA%25BA%25E6%259E%2597%25E5%2589%2591%25E4%25BB%258A%25E6%2597%25A9%25E5%2586%25B7%25E9%2597%25AE%25E6%2598%25AF%25E5%2590%25A6%25E8%25AF%25B4%25E7%25BE%258E%25E5%259B%25BD%25E8%2587%25AA%25E5%25B7%25B1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1%20-%20https%3A%2F%2Frfi.my%2FAWki.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1%20-%20https%3A%2F%2Frfi.my%2FAWki.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWki.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8B%9C%E7%99%BB%E6%98%A8%E6%99%9A%E5%A4%A7%E6%89%B9%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E6%8E%92%E5%A4%96%E4%B8%8E%E4%BD%9C%E5%BC%8A%20%E5%8F%91%E8%A8%80%E4%BA%BA%E6%9E%97%E5%89%91%E4%BB%8A%E6%97%A9%E5%86%B7%E9%97%AE%E6%98%AF%E5%90%A6%E8%AF%B4%E7%BE%8E%E5%9B%BD%E8%87%AA%E5%B7%B1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
