--- a/articles/rfi/999970.md
+++ b/articles/rfi/999970.md
@@ -1,5 +1,5 @@
 <!--1713438901000-->
-[中国34岁网红“飞飞一杯酒”疑心脏病猝死 冲热搜第一](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2-%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92-%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB-%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80)
+[中国慰安妇后人在中国法院起诉日本政府](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E4%B8%AD%E5%9B%BD%E6%85%B0%E5%AE%89%E5%A6%87%E5%90%8E%E4%BA%BA%E5%9C%A8%E4%B8%AD%E5%9B%BD%E6%B3%95%E9%99%A2%E8%B5%B7%E8%AF%89%E6%97%A5%E6%9C%AC%E6%94%BF%E5%BA%9C)
 ------
 
-<div>18/04/2024 - 11:53</div><img src="https://s.rfi.fr/media/display/726932c2-fd69-11ee-8493-005056a90284/w:1280/p:16x9/whts.jpg"><p><strong>在中国微博、抖音拥有89万、51万粉丝的中国网红“飞飞一杯酒”是知名酒类博主，号称“喝了几千款，永远差一杯”。17日晚间突传该网红死讯。        </strong></p><div><p>据自由时报今天报道称，34岁网红飞飞一杯酒心脏病猝死 过世当天还更新影片。“飞飞一杯酒”死讯曝光后，随即冲上微博热搜第一名，他的微博号昨晚也发讣闻，指他15日因心脏病突发在河南省中医院过世，享年34岁。</p><p>讣闻中形容“飞飞一杯酒”一生“出生、读书、画画”、“喝酒、侃酒、交友”，“结婚、生子、离去”，走完了一生；但更让人不舍的是，他的微博在15日下午4时30分还更新影片，让许多网友留言不舍哀悼一路走好，并推测其死因可能与生活长期熬夜和饮酒有关。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWlt.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E4%25B8%25AD%25E5%259B%25BD34%25E5%25B2%2581%25E7%25BD%2591%25E7%25BA%25A2-%25E9%25A3%259E%25E9%25A3%259E%25E4%25B8%2580%25E6%259D%25AF%25E9%2585%2592-%25E7%2596%2591%25E5%25BF%2583%25E8%2584%258F%25E7%2597%2585%25E7%258C%259D%25E6%25AD%25BB-%25E5%2586%25B2%25E7%2583%25AD%25E6%2590%259C%25E7%25AC%25AC%25E4%25B8%2580&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWlt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80%20-%20https%3A%2F%2Frfi.my%2FAWlt.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWlt.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD34%E5%B2%81%E7%BD%91%E7%BA%A2%E2%80%9C%E9%A3%9E%E9%A3%9E%E4%B8%80%E6%9D%AF%E9%85%92%E2%80%9D%E7%96%91%E5%BF%83%E8%84%8F%E7%97%85%E7%8C%9D%E6%AD%BB%20%E5%86%B2%E7%83%AD%E6%90%9C%E7%AC%AC%E4%B8%80&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 12:39</div><img src="https://s.rfi.fr/media/display/e4e01536-fd6f-11ee-b7cd-005056a97e36/w:1280/p:16x9/waftdit.jpg"><p><strong>中国18名慰安妇的子女日前将诉状递交山西省高级人民法院，是中国民间针对慰安妇议题对日控诉32年以来，首次向中国法院提起诉讼，控告日本政府。        </strong></p><div><p>据中央社今天引述中国官方媒体消息称，中国慰安妇子女首次在本国法院控告日本政府。其中一名慰安妇的子女李拉弟，在民事诉状中将日本政府列为被告，就日本军队过去对其母亲实施的严重违法犯罪侵权行为，请求日本政府公开道歉、忏悔，并赔偿损害赔偿金及精神抚慰金，合计人民币200万元。</p><p>实际上，中国慰安妇早在1992年即向日本政府正式提出控诉，于1995年正式开庭，经过12年共几十次的开庭，日本法院最终判决承认历史事实，但不予经济赔偿。</p><p>这次决定向中国法院提出控告的发起人，是从1982年开始调查中国慰安妇议题的张双兵，他与众多专家、律师组成10多人的团队，再次向日本政府提起诉讼。</p><p>张双兵表示，经过10多年在日本法院控告无果后，韩国法院的判决让他们逐渐意识到，可以透过在中国法院起诉，为中国慰安妇们讨回公道。</p><p>据该报道，韩籍慰安妇受害者过去在韩国法院获判胜诉，要求日本应赔偿受害者。中国慰安妇子女日前仿效该作法，首次在中国法院向日本政府提起诉讼。</p><p>2021年，韩国首尔中央地方法院判决韩籍慰安妇受害者向日本政府要求损害赔偿一案胜诉，要求日本政府应赔偿原告每人1亿韩元。但同年4月，韩国首尔中央地方法院驳回另一件20名韩籍慰安妇控告日本政府的诉讼案，并承认国际法上的“主权免除”原则，认为国家的行为、财产不能在他国法院审判。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWmh.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E4%25B8%25AD%25E5%259B%25BD%25E6%2585%25B0%25E5%25AE%2589%25E5%25A6%2587%25E5%2590%258E%25E4%25BA%25BA%25E5%259C%25A8%25E4%25B8%25AD%25E5%259B%25BD%25E6%25B3%2595%25E9%2599%25A2%25E8%25B5%25B7%25E8%25AF%2589%25E6%2597%25A5%25E6%259C%25AC%25E6%2594%25BF%25E5%25BA%259C&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B8%AD%E5%9B%BD%E6%85%B0%E5%AE%89%E5%A6%87%E5%90%8E%E4%BA%BA%E5%9C%A8%E4%B8%AD%E5%9B%BD%E6%B3%95%E9%99%A2%E8%B5%B7%E8%AF%89%E6%97%A5%E6%9C%AC%E6%94%BF%E5%BA%9C%20-%20https%3A%2F%2Frfi.my%2FAWmh.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B8%AD%E5%9B%BD%E6%85%B0%E5%AE%89%E5%A6%87%E5%90%8E%E4%BA%BA%E5%9C%A8%E4%B8%AD%E5%9B%BD%E6%B3%95%E9%99%A2%E8%B5%B7%E8%AF%89%E6%97%A5%E6%9C%AC%E6%94%BF%E5%BA%9C%20-%20https%3A%2F%2Frfi.my%2FAWmh.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWmh.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B8%AD%E5%9B%BD%E6%85%B0%E5%AE%89%E5%A6%87%E5%90%8E%E4%BA%BA%E5%9C%A8%E4%B8%AD%E5%9B%BD%E6%B3%95%E9%99%A2%E8%B5%B7%E8%AF%89%E6%97%A5%E6%9C%AC%E6%94%BF%E5%BA%9C&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
