--- a/articles/rfi/999992.md
+++ b/articles/rfi/999992.md
@@ -1,5 +1,5 @@
-<!--1713374103000-->
-[2024年夏季奥运会倒计时100天，巴黎准备好了吗？](https://www.rfi.fr/cn/%E6%B3%95%E5%9B%BD/20240417-2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97)
+<!--1713375902000-->
+[拜登将发表经济演讲 呼吁将中国钢铁关税提高两倍](https://www.rfi.fr/cn/%E7%BB%8F%E8%B4%B8/20240417-%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2-%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D)
 ------
 
-<div>17/04/2024 - 12:03</div><img src="https://s.rfi.fr/media/display/602bcf6c-f025-11ee-a26d-005056bfb2b6/w:1280/p:16x9/000_34MX8FC.jpg"><p><strong>距离2024年巴黎夏季奥运会开幕仅剩100天，巴黎、法国本土其他地区和大溪地的奥运场馆正准备迎接7月26日至8月11日之间即将举行的世界上最大的体育赛事 。        </strong></p><div><p>巴黎届时将拥有15个奥运会比赛场馆，并将在其一些最具标志性的古迹及其周边举办32项奥运会比赛项目中的21项。</p><p>巴黎于2017年获得了本届奥运会的主办权，多年来一直在建设场馆，所有工作计划于2024年初完成。这些新场馆包括巴黎附近的水上运动中心，该中心将举办水球和跳水比赛。在水上运动中心附近，平日里举办橄榄球或足球世界杯的法兰西体育场刚刚修建了一条全新的田径跑道。将迎接羽毛球和艺术体操比赛的拉夏贝尔门体育场是小巴黎唯一新建的奥运场馆。通常迎接各类音乐会的德方斯竞技场将在五月份彻底改造，以容纳举办游泳比赛的奥林匹克游泳池。射击运动员将在距离巴黎数小时车程的法国中部小镇沙托鲁射击中心进行比赛。</p><p>7月26日，数千名运动员将在塞纳河上乘船参加奥运开幕式。塞纳河还将在铁人三项和开放水域游泳比赛中接待游泳运动员。这是自100年前，即1924年巴黎举办奥运会以来，塞纳河首次成为被认为安全的游泳比赛场地。</p><p>塞纳河对岸的大皇宫是为1900年世界博览会而建的，经过翻修后，今年可举办击剑和跆拳道比赛。</p><p>沙滩排球比赛将在埃菲尔铁塔脚下的战神广场上举行，运动员们或将在比赛时目睹铁塔上的日落。</p><p>香榭丽舍大街尽头的协和广场将举办小轮车自由式、滑板和霹雳舞赛事。</p><p>荣军院建于1687年，是一所军事医院和退伍军人养老院，内有法国军事历史博物馆和纪念碑，以及拿破仑·波拿巴的墓。本次奥运会期间，观众将可以前往此地观看射箭、自行车和田径比赛。</p><p>距离巴黎不远处，马术比赛将在凡尔赛宫花园举行。凡尔赛宫是国王路易十四的居所，在法国大革命之前，它一直是皇室的中心。</p><p>在巴黎之外，帆船比赛将在马赛的蔚蓝海岸全新航海中心举行。为了向法国的海外领土致敬，冲浪比赛将在法属波利尼西亚大溪地西南海岸的一个村庄蒂胡波奥举行。这是一个拥有原始自然美景的地方，拥有世界上最著名的冲浪胜地。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZS.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25B3%2595%25E5%259B%25BD%2F20240417-2024%25E5%25B9%25B4%25E5%25A4%258F%25E5%25AD%25A3%25E5%25A5%25A5%25E8%25BF%2590%25E4%25BC%259A%25E5%2580%2592%25E8%25AE%25A1%25E6%2597%25B6100%25E5%25A4%25A9%25EF%25BC%258C%25E5%25B7%25B4%25E9%25BB%258E%25E5%2587%2586%25E5%25A4%2587%25E5%25A5%25BD%25E4%25BA%2586%25E5%2590%2597&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F%20-%20https%3A%2F%2Frfi.my%2FAWZS.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZS.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=2024%E5%B9%B4%E5%A4%8F%E5%AD%A3%E5%A5%A5%E8%BF%90%E4%BC%9A%E5%80%92%E8%AE%A1%E6%97%B6100%E5%A4%A9%EF%BC%8C%E5%B7%B4%E9%BB%8E%E5%87%86%E5%A4%87%E5%A5%BD%E4%BA%86%E5%90%97%EF%BC%9F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 12:25</div><img src="https://s.rfi.fr/media/display/65d8b236-e36a-11ed-b9ce-005056bf30b7/w:1280/p:16x9/AP23081816726304.jpg"><p><strong>美国总统拜登（Joe Biden）4月17日将在美国钢铁业的中心匹兹堡发表经济竞争演讲，呼吁其政府加大对中国钢铁业的压力，这是他在宾夕法尼亚州为期三天的竞选活动的一部分。拜登将投资美国制造业作为其经济政策的一个重要支柱，尽管选民对他处理经济的能力持续打低分。此外，美国贸易代表办公室还将宣布对中国造船业的补贴发起301调查。        </strong></p><div><p>拜登周二在他的家乡宾州斯克兰顿围绕税收政策发表了经济演讲，并访问了工会工人，周四他将前往费城参加竞选活动，在前总统特朗普本周大部分时间在纽约法庭接受刑事审理之际，拜登试图设置一个鲜明的对比。</p><p>拜登周三将在美国钢铁公司(US Steel)总部发表讲话，呼吁美国贸易代表戴琪在为期4年的审查结束之前，通过审查301条款关税税率，“考虑将现有的7.5%的中国钢铁和铝关税税率提高两倍”。一位美国高级官员说，官员们预计正在进行的审查“很快”就会完成，而戴琪可能会根据审查结果采取行动，提高关税的“有效性”。</p><p>美国国家经济委员会主任布雷纳德（Lael Brainard）称拜登的呼吁是“战略性的、平衡的和有针对性的”，并表示这将保护美国免受中国削弱其国内钢铁制造业的影响。</p><p>布雷纳德说：“总统明白我们必须投资于美国制造业，但我们也必须保护这些投资和这些工人免受与中国工业产能过剩相关的不公平出口的影响”。她指出，中国的工业产能过剩“对美国钢铁和铝业的未来构成了严重风险”。</p><p>布雷纳德说，这一方法是“与行业利益相关者和工会密切合作”制定的。拜登还将强调美国商务部通过反倾销和反补贴税等行动打击中国“廉价产品充斥市场”的企图。</p><p>拜登是在上月公开反对日本制铁以140亿美元收购美国钢铁公司这一有争议的交易之后来到宾州的。美国钢铁公司股东上周批准了这一交易，但仍需司法部和美国外国投资委员会的批准。</p><p>今年3月，拜登曾表示，美国钢铁公司“继续成为一家由美国本土拥有和经营的公司”是“至关重要的”，一位政府高级官员告诉记者，拜登将在匹兹堡重申这一观点，并称总统“将再次明确这一点”。透露消息的官员们淡化了潜在关税可能导致额外通胀的担忧。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZs.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BB%258F%25E8%25B4%25B8%2F20240417-%25E6%258B%259C%25E7%2599%25BB%25E5%25B0%2586%25E5%258F%2591%25E8%25A1%25A8%25E7%25BB%258F%25E6%25B5%258E%25E6%25BC%2594%25E8%25AE%25B2-%25E5%2591%25BC%25E5%2590%2581%25E5%25B0%2586%25E4%25B8%25AD%25E5%259B%25BD%25E9%2592%25A2%25E9%2593%2581%25E5%2585%25B3%25E7%25A8%258E%25E6%258F%2590%25E9%25AB%2598%25E4%25B8%25A4%25E5%2580%258D&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2%20%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D%20-%20https%3A%2F%2Frfi.my%2FAWZs.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2%20%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D%20-%20https%3A%2F%2Frfi.my%2FAWZs.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZs.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%8B%9C%E7%99%BB%E5%B0%86%E5%8F%91%E8%A1%A8%E7%BB%8F%E6%B5%8E%E6%BC%94%E8%AE%B2%20%E5%91%BC%E5%90%81%E5%B0%86%E4%B8%AD%E5%9B%BD%E9%92%A2%E9%93%81%E5%85%B3%E7%A8%8E%E6%8F%90%E9%AB%98%E4%B8%A4%E5%80%8D&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
