--- a/articles/rfi/999997.md
+++ b/articles/rfi/999997.md
@@ -1,5 +1,5 @@
-<!--1713366902000-->
-[人工智能：海湾地区或排斥抖音等而选择了微软](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240417-%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD-%E6%B5%B7%E6%B9%BE%E5%9C%B0%E5%8C%BA%E6%88%96%E6%8E%92%E6%96%A5%E6%8A%96%E9%9F%B3%E7%AD%89%E8%80%8C%E9%80%89%E6%8B%A9%E4%BA%86%E5%BE%AE%E8%BD%AF)
+<!--1713366903000-->
+[昂山素季被由监禁转为监视居住](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F)
 ------
 
-<div>17/04/2024 - 15:13</div><img src="https://s.rfi.fr/media/display/8be12aba-799e-11ee-955e-005056a97e36/w:1280/p:16x9/000_32Y87N6.jpg"><p><strong>微软与阿联酋政府支持的科技投资巨头 G42签协建立了价值 15 亿美元的新合作伙伴关系，标志着人工智能日益疯狂的全球棋局迈出了惊人的一步。        </strong></p><div><p>据Axios今天称，这一合作与选择的重要性在于，该交易扩大了美国的人工智能领域，将中国排除在阿联酋市场之外，同时将微软的人工智能业务置于美国地缘政治利益和政策的核心。</p><p>这笔交易部分是由商务部长吉娜·雷蒙多促成的，并为微软总裁布拉德·史密斯赢得了 G42 董事会的一个席位。由此，G42 将阿联酋本土的人工智能模型置于微软的 Azure 平台上。</p><p>当 G42 为其 Azure 云服务付费时，微软将收回大部分投资。</p><p>G42将从它的系统中剔除中国华为制造的设备。在美国的压力下， G42今年 2 月分别从包括 TikTok 母公司字节跳动在内的中国公司撤资。</p><p>据雷蒙多告诉《纽约时报》，“当谈到新兴技术时，你不能同时站在中国阵营和我们阵营。”</p><p>该交易展示了公司和政府如果在人工智能开发和治理问题上站在华盛顿而不是北京的一边，可以获得的好处。它还表明了出于地缘政治和金融原因，美国政府和大型科技公司对海湾市场的重视。</p><p>据Axios称，美国政府从 1997 年开始大力分拆微软，但以失败告终后，微软一直在努力避免监管纠纷。 2004年至2013年间，该公司还面临欧盟数十亿美元的反垄断罚款。该公司的业务范围从布鲁塞尔欧盟总部门口的技术演示中心到纽约事实上的驻联合国大使馆，并在各大洲部署了大批游说者。</p><p>微软最近因其人工智能合作伙伴关系和对游戏巨头动视暴雪的收购而再次成为反垄断的焦点。美国联邦贸易委员会正在审查人工智能巨头的收购是否存在反竞争行为的迹象。</p><p>拜登政府的一个部门瞄准微软日益增长的人工智能影响力，而另一个部门则与该公司联手，这可能会很尴尬。</p><p>据该报道，微软在中国有着复杂的关系。去年，史密斯因微软在北京投资数十亿美元建设人工智能实验室而受到参议员质询，该实验室的历史可以追溯到 20 世纪 80 年代，并拥有 200 名左右的当地研究人员。</p><p>G42 由阿联酋最高级安全官员谢赫·塔努·本·扎耶德 (Sheikh Tahnoon bin Zayed) 担任主席，并得到该国主权财富基金穆巴达拉 (Mubadala) 的支持。它有分散地缘政治赌注的记录。</p><p>该公司是《亚伯拉罕协议》之后在以色列设立的第一家阿联酋公司。</p><p>它还与中国公司华大基因 (BGI) 合作，该公司开发了 COVID-19 快速检测仪，并向内华达州免费提供检测仪，此举引起了联邦官员的私下警告。</p><p>据《纽约时报》指，G42 首席执行官彭晓出生于中国，但在获得美国公民身份后，他放弃了美国公民身份，转而加入阿联酋公民。</p><p>据Axios，在 G42 这个名字中，G 代表群体，而 42 则参考了《银河系漫游指南》，其中一台名为 Deep Thought 的超级计算机表示 42 是“宇宙和一切生命的终极问题”的答案。</p><p>这笔交易凸显了一场正在兴起的战斗，以确定哪些国家的系统——进而决定哪些国家的价值观——将主宰人工智能世界。</p><p>人工智能制造商面临来自政府的压力，要求他们调整其系统以反映不同的敏感性——例如围绕妇女和 LGBTQ 权利等问题——或限制对政府的批评。</p><p>一位消息人士指出，这笔交易可以帮助微软进入美国公司尚未涉足的东南亚和非洲地区。另一位消息人士指出，这些变化可能有助于使 G42 的服务更适合庞大的印度市场，而不是被视为更符合中国的服务。</p><p>据Axios，在微软获胜后，其他拥有大型政府合同的科技巨头——例如谷歌和亚马逊—— 也可能试图在人工智能外交市场上获利。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWce.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240417-%25E4%25BA%25BA%25E5%25B7%25A5%25E6%2599%25BA%25E8%2583%25BD-%25E6%25B5%25B7%25E6%25B9%25BE%25E5%259C%25B0%25E5%258C%25BA%25E6%2588%2596%25E6%258E%2592%25E6%2596%25A5%25E6%258A%2596%25E9%259F%25B3%25E7%25AD%2589%25E8%2580%258C%25E9%2580%2589%25E6%258B%25A9%25E4%25BA%2586%25E5%25BE%25AE%25E8%25BD%25AF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%EF%BC%9A%E6%B5%B7%E6%B9%BE%E5%9C%B0%E5%8C%BA%E6%88%96%E6%8E%92%E6%96%A5%E6%8A%96%E9%9F%B3%E7%AD%89%E8%80%8C%E9%80%89%E6%8B%A9%E4%BA%86%E5%BE%AE%E8%BD%AF%20-%20https%3A%2F%2Frfi.my%2FAWce.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%EF%BC%9A%E6%B5%B7%E6%B9%BE%E5%9C%B0%E5%8C%BA%E6%88%96%E6%8E%92%E6%96%A5%E6%8A%96%E9%9F%B3%E7%AD%89%E8%80%8C%E9%80%89%E6%8B%A9%E4%BA%86%E5%BE%AE%E8%BD%AF%20-%20https%3A%2F%2Frfi.my%2FAWce.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWce.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BA%BA%E5%B7%A5%E6%99%BA%E8%83%BD%EF%BC%9A%E6%B5%B7%E6%B9%BE%E5%9C%B0%E5%8C%BA%E6%88%96%E6%8E%92%E6%96%A5%E6%8A%96%E9%9F%B3%E7%AD%89%E8%80%8C%E9%80%89%E6%8B%A9%E4%BA%86%E5%BE%AE%E8%BD%AF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 11:36</div><img src="https://s.rfi.fr/media/display/28e80d0a-3049-11ee-a87e-005056a90284/w:1280/p:16x9/AP23213219378174.jpg"><p><strong>缅甸一位消息人士告诉法新社，被废黜的缅甸反对派领导人昂山素季已被执政军政府从监狱转为软禁。 一位不愿透露姓名的缅甸军方消息人士称，缅甸前总统温敏也从这项措施中受益。        </strong></p><div><p>缅甸的昂山素季被从牢房转移至软禁。缅甸军政府发言人佐敏敦称，该国气温热浪促使当局采取措施保护脆弱的被拘留者。 佐敏吞告诉法新社：“不仅昂山素季和温敏，一些老年囚犯也因酷热而得到了必要的护理。”</p><p>78 岁的昂山素季 (Aung San Suu Kyi) 是 1991 年诺贝尔奖获得者，因遭指控腐败和违反 Covid-19 限制等一系列刑事定罪，正在服刑 27 年。 自从昂山素季在 2021 年军队政变被推翻下台，并被军方逮捕以来，她基本上一直消失于公众视线中，仅在内比都法庭拍摄的模糊官方媒体照片中露面过一次，据当地媒体报道，她正面临健康问题。</p><p>当地媒体报道称，在长达数月的庭审中，昂山素季出现头晕、呕吐，有时由于牙齿感染而无法进食。</p><p>据本台报道称，昂山素季的儿子金·阿里斯 (Kim Aris) 今年 2 月告诉法新社，昂山素季仍被关押在军事首都内比都的一座监狱内。 肖恩·特内尔（Sean Turnell）去年向法新社描述，这座综合大楼在炎热时期没有空调系统，混凝土墙在季风期间会渗水，他曾在那里被监禁了几个月。 在这个与世隔绝的首都的监禁与昂山素季在前军政府时期被软禁的岁月相比，条件相差很大，而当时昂山素季在长期的被软禁中成为了世界著名的民主领袖。</p><p>不过，目前无法立即确定对昂山素季的决定是暂时的还是代表某种减刑。</p><p>军政府还在周三今天的新闻稿中宣布，在缅甸新年之际特赦了 3,300 名囚犯。 军政府表示，周三宣布的囚犯大赦包括将被驱逐出境的 13 名印度尼西亚人和 15 名斯里兰卡人。 新闻稿指出，除了那些被判犯有谋杀、恐怖主义和贩毒罪的囚犯外，其他囚犯的刑期将减少六分之一。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWZ2.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E6%2598%2582%25E5%25B1%25B1%25E7%25B4%25A0%25E5%25AD%25A3%25E8%25A2%25AB%25E7%2594%25B1%25E7%259B%2591%25E7%25A6%2581%25E8%25BD%25AC%25E4%25B8%25BA%25E7%259B%2591%25E8%25A7%2586%25E5%25B1%2585%25E4%25BD%258F&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F%20-%20https%3A%2F%2Frfi.my%2FAWZ2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F%20-%20https%3A%2F%2Frfi.my%2FAWZ2.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWZ2.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E6%98%82%E5%B1%B1%E7%B4%A0%E5%AD%A3%E8%A2%AB%E7%94%B1%E7%9B%91%E7%A6%81%E8%BD%AC%E4%B8%BA%E7%9B%91%E8%A7%86%E5%B1%85%E4%BD%8F&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
