--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-19 [微软与阿联酋G42达成AI协议 美外交斡旋逼走了北京的中东势力？](/articles/voa/1016272.md)
+
 4-19 [以色列对伊朗发动报复性打击](/articles/voa/1016273.md)
 
 4-19 [欠中国的债务即将到期，令吉尔吉斯斯坦民众不安](/articles/voa/1016274.md)
@@ -598,6 +600,4 @@
 4-8 [台积电将建亚利桑纳州第三座芯片厂 拜登：美国的半导体制造正在复苏](/articles/voa/1016570.md)
 
 4-8 [中国商务部长访欧 否认电动车靠补贴占优势](/articles/voa/1016571.md)
-
-4-8 [韩国国会选举在即 选民对两大党不满可能使小党成为关键少数](/articles/voa/1016572.md)
 
