--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-19 [美否決巴勒斯坦加入聯合國 中國：強盜邏輯](/articles/dw/1025859.md)
+
 4-18 [中国央行前副行长出庭受审](/articles/dw/1025860.md)
 
 4-18 [德语媒体：肖尔茨在北京碰了软钉子](/articles/dw/1025861.md)
@@ -598,6 +600,4 @@
 3-24 [墙外文摘：武汉新冠疫情原本可望得到遏制](/articles/dw/1026157.md)
 
 3-24 [媒体：中国要求政府机构电脑淘汰英特尔、Windows](/articles/dw/1026158.md)
-
-3-24 [IMF总裁：中国面临岔路口](/articles/dw/1026159.md)
 
