--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+4-19 [中国公务员专题：中国“降薪时代” 事业编制员工提前退休止损](/articles/rfa/1037279.md)
+
 4-19 [中使馆介入为TikTok游说　母公司字节跳动与政府关系再引质疑](/articles/rfa/1037280.md)
 
 4-19 [二十三条实施后海外港人成立首个提倡"自决"组织　疑受中共黑客攻击](/articles/rfa/1037281.md)
@@ -598,6 +600,4 @@
 3-16 [二十四省公务员联考 　年轻人为何热衷上岸"成公"？](/articles/rfa/1037577.md)
 
 3-16 [中国外长王毅将出访澳洲　外交目的几何？](/articles/rfa/1037578.md)
-
-3-15 [中国房市恶化　新建与二手房销价双跌](/articles/rfa/1037579.md)
 
