--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-19 [苹果从中国区应用商店下架WhatsApp](/articles/nyt/1042844.md)
+
 4-19 [研究称中国近半城市地面沉降，北京下沉速度最快](/articles/nyt/1042845.md)
 
 4-19 [共和党金主、一家房地产初创企业和TikTok的起源](/articles/nyt/1042846.md)
@@ -598,6 +600,4 @@
 1-12 [台湾人如何为选举造势？横幅、热舞、“冻蒜”口号](/articles/nyt/1043142.md)
 
 1-11 [当台湾的民主选举成为北京的威胁](/articles/nyt/1043143.md)
-
-1-11 [2024大选年，一场“彻头彻尾的虚假信息灾难“？](/articles/nyt/1043144.md)
 
