--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+4-19 [中国出口激增威胁拜登产业政策](/articles/nyt/1042843.md)
+
 4-19 [苹果从中国区应用商店下架WhatsApp](/articles/nyt/1042844.md)
 
 4-19 [研究称中国近半城市地面沉降，北京下沉速度最快](/articles/nyt/1042845.md)
@@ -598,6 +600,4 @@
 1-12 [联合国警告全球近四分之一人口面临干旱危机](/articles/nyt/1043141.md)
 
 1-12 [台湾人如何为选举造势？横幅、热舞、“冻蒜”口号](/articles/nyt/1043142.md)
-
-1-11 [当台湾的民主选举成为北京的威胁](/articles/nyt/1043143.md)
 
