--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-19 [最新研究指出中国近一半的主要城市正在下沉](/articles/voa/1016270.md)
+
 4-19 [以色列袭击伊朗后，多家国际航班匆忙改道以避开伊朗领空](/articles/voa/1016271.md)
 
 4-19 [微软与阿联酋G42达成AI协议 美外交斡旋逼走了北京的中东势力？](/articles/voa/1016272.md)
@@ -598,6 +600,4 @@
 4-8 [聿文视界：马英九访中，北京的政治算计和布局](/articles/voa/1016568.md)
 
 4-8 [耶伦：强调对中国产能过剩的担忧并非出于“反华情绪”或“脱钩意愿”](/articles/voa/1016569.md)
-
-4-8 [台积电将建亚利桑纳州第三座芯片厂 拜登：美国的半导体制造正在复苏](/articles/voa/1016570.md)
 
