--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-19 [泽连斯基视察东部前线，乌军首次击落一架俄罗斯战略轰炸机](/articles/voa/1016266.md)
+
+4-19 [伊朗低调应对以色列反击，暗示不再报复](/articles/voa/1016267.md)
+
 4-19 [以色列和伊朗的“爱恨情仇”](/articles/voa/1016268.md)
 
 4-19 [以色列据报袭击伊朗后，各方的反应 （更新中）](/articles/voa/1016269.md)
@@ -596,8 +600,4 @@
 4-8 [美日澳菲首次南中国海联合演习 专家：抗衡中国威胁](/articles/voa/1016564.md)
 
 4-8 [欧盟将很快就里程碑意义的庇护改革法最终投票表决](/articles/voa/1016565.md)
-
-4-8 [花莲震后搜救近尾声，漫长重建路刚刚开始](/articles/voa/1016566.md)
-
-4-8 [瑞典驱逐一名为中共大外宣服务的中国籍女记者，称其威胁国家安全](/articles/voa/1016567.md)
 
