--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-19 [2024世界新闻摄影奖：痛苦、哀伤与感人的瞬间](/articles/dw/1025854.md)
+
 4-19 [布林肯指责北京帮助俄罗斯重振国防工业](/articles/dw/1025855.md)
 
 4-19 [美媒：以色列发起空袭 伊朗称击落无人机](/articles/dw/1025856.md)
@@ -598,6 +600,4 @@
 3-25 [欧洲及德国议会代表团访问台湾](/articles/dw/1026152.md)
 
 3-25 [門開一半?中國發展論壇喊開放卻少總理座談](/articles/dw/1026153.md)
-
-3-25 [香港律政司：批评23条可能触犯23条](/articles/dw/1026154.md)
 
