--- a/articles/rfi/999952.md
+++ b/articles/rfi/999952.md
@@ -1,5 +1,5 @@
-<!--1713532502000-->
-[美国宇航局长揭露中国以民用计划之名掩盖军事太空计划 - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240419-%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E9%95%BF%E6%8F%AD%E9%9C%B2%E4%B8%AD%E5%9B%BD%E4%BB%A5%E6%B0%91%E7%94%A8%E8%AE%A1%E5%88%92%E4%B9%8B%E5%90%8D%E6%8E%A9%E7%9B%96%E5%86%9B%E4%BA%8B%E5%A4%AA%E7%A9%BA%E8%AE%A1%E5%88%92)
+<!--1713532503000-->
+[美国宇航局局长警告：中国利用民用项目掩盖太空军事存在](https://www.rfi.fr/cn/%E7%BE%8E%E5%9B%BD/20240418-%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A-%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8)
 ------
 
-<div>19/04/2024 - 14:34</div><img src="https://s.rfi.fr/media/display/de712a84-105a-11ea-a2a3-005056bff430/w:1280/p:16x9/03-revue-de-presse_0.png"><p><strong>法国总理阿塔尔任职100天，周四晚间做客24小时滚动新闻台BFMTV，详细阐述了任职后的作为，并承诺将对一些年轻人的“暴力”行为迅速做出反应；欧洲选举日益迫近，法国北部一些地区的民众却漠不关心；乌克兰向国际社会发出紧急救援的呼声；欧洲电动汽车销售遇挫，三月份下滑11%，中国竞争威胁迫在眉睫；这是19日出版的法国各报开篇新闻话题。                    </strong></p><div><p>关于中国，《费加罗报》揭示美国宇航局局长为中国的太空军事能力拉响警钟；《回声报》则报道了中国奇瑞汽车在西班牙建厂的消息。另外，印度迎来全球规模最大的选举，则是多份日报关注的亚洲新闻重点。</p><p><strong>尼尔森为中国的太空军事能力拉响警钟</strong></p><p>美国宇航局局长尼尔森星期三（4月17日）在众议院拨款委员会针对航天局2025年预算发言，对中国近年来在太空领域取得的巨大进步深表担忧。尼尔森指责中国继续增强其太空能力，并以民用计划的名义掩盖军事太空计划。美国宇航局局长强调：美中之间目前正在进行一场“竞赛”，美国必须先于中国成功登陆月球。因为他担心：一旦中国率先登陆，则可能宣称“月球为其领土”。尼尔森表示：中国在这方面投入了大量资金。美国“真的不应该放松警惕”。</p><p>美国计划于2026年通过阿尔忒弥斯3号任务将宇航员送上月球。</p><p>中国也计划在2030年之前将人类送往月球。美国民选官员在向美国航天局提出年度预算请求期间听取了尼尔森的表述。</p><p><strong>中国奇瑞在巴塞罗纳建厂</strong></p><p>另外，欧洲电动汽车市场出现低迷，随着各国收紧电动车补贴政策，3月份欧洲电动汽车销售下降11%。与此同时，中国奇瑞新能源星期二（4月16日）宣布：与西班牙埃布罗（Ebro-EV Motors）公司在巴塞罗纳成立一家合资企业，厂址选在2021年底关闭的前日产汽车旧址，计划将工厂改造为电动汽车中心。</p><p>《回声报》指出：中国奇瑞新能源加速进军欧洲，希望在欧洲发展销售业务，成为第一家在欧洲设厂的中国电动汽车企业。</p><p>这家由西班牙埃布罗占多数股权的合资企业承诺，在现有基础设施再利用的基础上，将于今年第四季度末开始生产。</p><p>报道指出：通过在欧洲建厂，奇瑞公司面临巨大挑战。这家原本注重低端市场的制造商，打算推出新的品牌重塑形象。同时为了更快地在激烈的竞争中找到一席之地，奇瑞准备以极具吸引力的价格打响市场争夺战。</p><p><strong>印度：最大规模的选举</strong></p><p>此外，多份日报聚焦今天开始的印度议会下院选举。报道指出：全球最大规模的选举-印度议会下院选举19日正式拉开帷幕。公众舆论和观察家一致认为：即将卸任的总理穆迪领导的印度人民党将赢得多数席位。根据3月6日公布的民意调查，75%的选民对穆迪表示支持。随着第二个五年任期的结束，穆迪的民意支持率一年内跃升了8个百分点。</p><p>不过，印度总理治理工作中也存在诸多不足。比如：在新冠病毒大流行期间显露出管理不善，导致印度成为全球受该病毒影响最严重的国家，死亡人数超过400万。还有，在中印两国军队在喜马拉雅山西部的冲突中表现不力，未能有效地阻止中国军队占领大片富有争议的边境地带。</p><p>从经济层面看，尽管印度年增长率约为7%，但失业和就业不足仍是印度面临的最大挑战。国际劳工组织在3月份公布的一份报告中强调，2012至2022十年间，印度经济每年仅能为进入就业市场的1200万年轻人创立500万个就业机会。这场社会危机每年迫使超过10万民众非法移民。</p><p>印度总理穆迪执政十年还广得民心，是他以人民的无私公仆的形象维持的声望。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%B5%81%E8%8A%B3/" title="流芳">流芳</a></div></div></div></div>
+<div>18/04/2024 - 16:23</div><img src="https://s.rfi.fr/media/display/c28e1990-fd67-11ee-b1f8-005056a97e36/w:1280/p:16x9/AP23117711747550.jpg"><p><strong>美国宇航局局长比尔·尼尔森 4 月 17 日在华盛顿表达了对中国秘密航天进展的担忧。他警告说，中国通过利用民用项目来掩盖军事目标以增强其太空能力，并警告华盛顿必须保持警惕。         </strong></p><div><p>中国在航空航天领域的进步，尤其是其不透明的做法，令美国宇航局感到担忧。比尔·尼尔森告诉国会山议员，中国对其太空进展“非常非常保密”，并警告“我们正在一场竞赛”。尼尔森怀疑中国的民用太空计划实际上隐藏着军事计划，这凸显了北京缺乏透明度。</p><p>美国宇航局局长比尔·尼尔森在国会山对议员们说：“中国取得了非凡的进步，特别是在过去十年中，但它们非常非常保密。”</p><p>尼尔森说：“我们认为，他们很多所谓的民用太空计划都是军事计划。我认为，实际上，我们正在进行一场竞赛。”</p><p>他说他希望北京能够“清醒过来，明白民用空间是用于和平用途”，但他补充说：“我们还没有看到中国表现出这一点。”</p><p>尼尔森是在众议院拨款委员会就 NASA 2025 年预算作证时发表上述言论的。</p><p>他表示，美国应该在中国之前再次登陆月球，因为两国都在执行月球任务。但他表示担心，如果北京先到达，可能会说：“好吧，这是我们的领土，你别进来。”</p><p>尼尔森此前表示，美国正在与中国“进行太空竞赛”，并警告说，中国最终可能声称“拥有”月球资源丰富的地区。</p><p>2022年，中国航天计划建成了地球轨道空间站，并实施了多次绕月和样本回收任务。</p><p>此后，美国一直计划通过阿耳忒弥斯三号任务在 2026 年将宇航员送回月球。中国表示希望在2030年之前将人类送上月球。</p><p>尼尔森表示，他相信美国不会失去其在太空探索方面的“全球优势”。</p><p>他说美国必须现实一点，因为“中国确实投入了大量资金，他们的预算还有很大的增长空间。“ 但 “我认为我们最好不要放松警惕。”</p><p>据美国国防情报局称，中国目前有 499 颗卫星在轨运行。这个数字是 2019 年的两倍多。中国还正在开发间谍气球和高超音速导弹。</p><p>《阿耳忒弥斯协定》是由美国宇航局和美国国务院起草一项要求太空活动必须出于和平目的的协议，已由包括英国在内的 40 多个国家签署。中国尚未签署这些协议。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWpb.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E7%25BE%258E%25E5%259B%25BD%2F20240418-%25E7%25BE%258E%25E5%259B%25BD%25E5%25AE%2587%25E8%2588%25AA%25E5%25B1%2580%25E5%25B1%2580%25E9%2595%25BF%25E8%25AD%25A6%25E5%2591%258A-%25E4%25B8%25AD%25E5%259B%25BD%25E5%2588%25A9%25E7%2594%25A8%25E6%25B0%2591%25E7%2594%25A8%25E9%25A1%25B9%25E7%259B%25AE%25E6%258E%25A9%25E7%259B%2596%25E5%25A4%25AA%25E7%25A9%25BA%25E5%2586%259B%25E4%25BA%258B%25E5%25AD%2598%25E5%259C%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8%20-%20https%3A%2F%2Frfi.my%2FAWpb.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8%20-%20https%3A%2F%2Frfi.my%2FAWpb.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWpb.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%BE%8E%E5%9B%BD%E5%AE%87%E8%88%AA%E5%B1%80%E5%B1%80%E9%95%BF%E8%AD%A6%E5%91%8A%EF%BC%9A%E4%B8%AD%E5%9B%BD%E5%88%A9%E7%94%A8%E6%B0%91%E7%94%A8%E9%A1%B9%E7%9B%AE%E6%8E%A9%E7%9B%96%E5%A4%AA%E7%A9%BA%E5%86%9B%E4%BA%8B%E5%AD%98%E5%9C%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
