--- a/articles/rfi/999957.md
+++ b/articles/rfi/999957.md
@@ -1,5 +1,5 @@
 <!--1713494701000-->
-[菲美肩并肩军演实弹击沉中国造退役军舰](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240418-%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0)
+[伊朗袭击以色列后 中俄联合支持德黑兰对抗华盛顿](https://www.rfi.fr/cn/%E4%B8%AD%E4%B8%9C/20240418-%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E-%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF)
 ------
 
-<div>18/04/2024 - 16:23</div><img src="https://s.rfi.fr/media/display/0e6b372e-e821-11ed-8ba9-005056a90284/w:1280/p:16x9/2023-04-29T210724Z_124636285_RC2BMW9Q52NU_RTRMADP_3_USA-PHILIPPINES.JPG"><p><strong>当地时间 4 月 22 日至 5 月 8 日，美国和菲律宾将举行本年度“肩并肩”联合军事演习，此次演习可能有多达 1 万 7 千人参加，主要有来自美国、菲律宾、澳洲和法国的武装部队。消息称，在“击沉演习”部分，演习击沉目标选定为退役的菲律宾海军补给舰“卡里拉亚湖”号，而此舰原是中国制造、菲律宾企业所使用的民用油船，是菲律宾唯一的“中国造海军资产”。        </strong></p><div><p>据新头壳今天引述中媒《观察者网》今（18）日消息，负责此次演习的菲律宾陆军上校和发言人洛吉科（Michael Logico）近期在记者会上公布，此次演习将创造诸多“第一”，除了人数创下历年最高，菲律宾海岸警卫队（PCG）也将首次参加演习，演习还将首次在菲律宾 12 海里领海以外展开，并将模拟“夺回被敌对势力占领的岛屿”等场景。另外在“击沉演习”部分，演习击沉目标选定为退役的菲律宾海军补给舰“卡里拉亚湖”号。</p><p>据该消息，值得注意的是，这艘军舰原是中国制造、菲律宾企业所使用的民用油船，是菲律宾唯一的“中国造海军资产”。对此菲军坚称，此举“并非有意为之”，这不代表向特定国家发出信号。洛吉科强调，这场联合军演不针对任何外国，包括中国。</p><p>此次演习还有另一个重点“后勤演习”，包括测试空运美国海军标准 6 型（SM-6）防空导弹系统的可行性。</p><p>今年“肩并肩”演习将有至少 1 万 6 千人一同参与，其中包括 1 万 1 千名美军士兵和 5 千名菲律宾武装部队士兵，其余人则将来自法国海军和澳洲国防军。这一总人数预计将超过去年的 1 万 6 千人，去年的参演人员主要来自美军和菲律宾武装部队。</p><p>该报引述洛吉科称，包括东盟、欧盟和日本在内的其他 14 个国家和组织，将针对演习派出“观察员”。洛吉科补充，今年演习将测试菲律宾武装部队与外国部队的“互操作性”，这一概念是由菲律宾国防部长特奥多罗（Gilberto Teodoro）提出，特奥多罗声称，这将使菲律宾武装部队从内部防御转向外部防御，或者从打击当地叛乱转向打击外国敌人。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWpZ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240418-%25E8%258F%25B2%25E7%25BE%258E%25E8%2582%25A9%25E5%25B9%25B6%25E8%2582%25A9%25E5%2586%259B%25E6%25BC%2594%25E5%25AE%259E%25E5%25BC%25B9%25E5%2587%25BB%25E6%25B2%2589%25E4%25B8%25AD%25E5%259B%25BD%25E9%2580%25A0%25E9%2580%2580%25E5%25BD%25B9%25E5%2586%259B%25E8%2588%25B0&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0%20-%20https%3A%2F%2Frfi.my%2FAWpZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0%20-%20https%3A%2F%2Frfi.my%2FAWpZ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWpZ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E8%8F%B2%E7%BE%8E%E8%82%A9%E5%B9%B6%E8%82%A9%E5%86%9B%E6%BC%94%E5%AE%9E%E5%BC%B9%E5%87%BB%E6%B2%89%E4%B8%AD%E5%9B%BD%E9%80%A0%E9%80%80%E5%BD%B9%E5%86%9B%E8%88%B0&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 20:12</div><img src="https://s.rfi.fr/media/display/07af6fa4-fc93-11ee-8851-005056a97e36/w:1280/p:16x9/e1d8ce33b89d57ff07354d9cb2a904726a60f587.jpg"><p><strong>莫斯科和北京并未谴责伊朗对以色列领土的袭击，但他们将这场危机视为挑拨西方与世界其他国家之间关系的机会。这是世界报的两名莫斯科特派记者勒梅特及维特金共同撰写报道指出的。         </strong></p><div><p>在伊朗与以色列之间的危机中，在大多数国家一致呼吁克制的背后，俄罗斯和中国外交立场却是坚决站在伊朗一边。 </p><p style="text-align:left">莫斯科和北京都没有谴责德黑兰在4月13日星期六晚上至4月14日星期日发动的大规模空袭。 相反，中国外交部长王毅周一与伊朗外长侯赛因·阿米尔·阿卜杜拉希安通电话提醒说，“中方强烈谴责并坚决反对针对伊朗驻大马士革使馆领事部的袭击事件”(发生在4月1日)，这是根据中国官方媒体新华社发布的这项谈话报道。 </p><p style="text-align:left">另一方面，北京“注意到伊朗的声明，即所采取的行动是有限的，并构成自卫行为”。 弗拉基米尔·普京周二(16日也指出，在与伊朗外长易卜拉欣·拉伊西的通话中，伊朗展现了希望“避免局势进一步升级”的意愿。 </p><p style="text-align:left">俄罗斯常驻联合国代表瓦西里·内本齐亚(Vassilyi Nebenzia)前一天已经提到伊朗的“合法回应”，并倾向于强调西方在此事上的“虚伪”。俄罗斯外交发言人玛丽亚·扎哈罗娃对以色列驻莫斯科大使西蒙娜·加尔佩林说：“西蒙娜，请您提醒我何时以色列谴责了基辅政权对俄罗斯领土的袭击。” </p><p style="text-align:left">俄罗斯的宣传渠道甚至对伊朗的袭击表现出某种形式的兴奋，首先描述了德黑兰的“胜利”和以色列的“恐慌”，然后采用了系列词句：“有限打击”具有简单的“警告”意义。 NTV 频道周一表示：“伊朗已成为穆斯林世界的重心，” </p><p style="text-align:left">伊朗是莫斯科的重要盟友： 在所采取的这些态度立场上 </p><p style="text-align:left">不仅仅是对于重要合作伙伴展现出很好的举止。 伊朗是莫斯科在对乌克兰战争中的重要盟友，并向俄罗斯提供无人机和导弹。  </p><p style="text-align:left">伊朗也是北京的主要石油供应国之一，北京一直反对对德黑兰实施制裁。 3月中旬，中国、俄罗斯、伊朗三国仍在阿拉伯海进行联合军事演习。 </p><p style="text-align:left">俄罗斯和中国的立场首先与 2023 年 10 月 7 日哈马斯袭击以色列后所做出的转变一致，中俄两国拖到很晚才谴责以色列，而且往往措辞含糊。  </p><p style="text-align:left">自此，北京在中东事务上极力采取与美国和七国集团截然相反的立场，自诩为“南方国家”的代言人。 </p><p style="text-align:left">正是以与西方面对面的名义，莫斯科牺牲了与以色列的良好关系以及迄今为止以平衡为考量的地区政策。  </p><p style="text-align:left">乌克兰战争是俄罗斯的绝对优先要务，中东的紧张局势是透过这个棱镜来分析的。  </p><p style="text-align:left">这种紧张情势是在西方与世界其他国家之间制造隔阂的一种手段，希望看到西方的注意力和资源分散，从而损害基辅。 对此，媒体援引俄罗斯分析师的话说，紧张局势的升级可能导致能源价格上涨，这对俄罗斯经济有利。 </p><p style="text-align:left">然而，失控的大火对于莫斯科和北京都没有任何好处。该地区不仅对中国的能源供应至关重要，而且没有任何迹象表明伊朗政权将会抵御过于残酷的震荡和冲击。反过来看，这个问题也适用于莫斯科在该地区的主要支持的对象--大马士革。 军事升级还可能削弱德黑兰向莫斯科供应武器的能力。 </p><p style="text-align:left"> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWsJ.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E4%25B8%259C%2F20240418-%25E4%25BC%258A%25E6%259C%2597%25E8%25A2%25AD%25E5%2587%25BB%25E4%25BB%25A5%25E8%2589%25B2%25E5%2588%2597%25E5%2590%258E-%25E4%25B8%25AD%25E4%25BF%2584%25E8%2581%2594%25E5%2590%2588%25E6%2594%25AF%25E6%258C%2581%25E5%25BE%25B7%25E9%25BB%2591%25E5%2585%25B0%25E5%25AF%25B9%25E6%258A%2597%25E5%258D%258E%25E7%259B%259B%25E9%25A1%25BF&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF%20-%20https%3A%2F%2Frfi.my%2FAWsJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF%20-%20https%3A%2F%2Frfi.my%2FAWsJ.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWsJ.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%BC%8A%E6%9C%97%E8%A2%AD%E5%87%BB%E4%BB%A5%E8%89%B2%E5%88%97%E5%90%8E%20%E4%B8%AD%E4%BF%84%E8%81%94%E5%90%88%E6%94%AF%E6%8C%81%E5%BE%B7%E9%BB%91%E5%85%B0%E5%AF%B9%E6%8A%97%E5%8D%8E%E7%9B%9B%E9%A1%BF&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
