--- a/articles/rfi/999961.md
+++ b/articles/rfi/999961.md
@@ -1,5 +1,5 @@
 <!--1713476702000-->
-[竞争力落后美中    欧盟27国共商对策](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD-%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96)
+[乌克兰称成功袭击克里米亚俄机场 俄军空袭乌北部城市](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA-%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82)
 ------
 
-<div>18/04/2024 - 22:57</div><img src="https://s.rfi.fr/media/display/0d312ef6-fd9a-11ee-a885-005056bfb2b6/w:1280/p:16x9/AP24109325782154.jpg"><p><strong></strong></p><div><p>莱塔的报告提出了一系列改善内部市场运作的措施，包括进一步整合电信、能源和金融部门，否则欧盟将注定衰落。随着欧洲议会选举临近，这个问题有望成为未来几个月欧洲政治议程的核心。</p><p>欧盟委员会主席乌苏拉·冯德莱恩表示，“我们联盟的竞争力和单一市场有坚实的基础，我们现在必须将其转变为长期可持续增长”。</p><p>德国官员认为，欧盟必须确保欧洲人不是简单的“其他地方生产的数字技术和服务的消费者”，并呼吁采取具体行动刺激资本获取、降低能源成本、解决熟练劳动力短缺问题并加强贸易联系。</p><p>提交了一份长达147页的报告后，恩里科·莱塔（Enrico Letta）在新闻发布会上表示，“这是最后一次机会，也是最后一个开放的窗口。”</p><p>报告称，地缘政治紧张局势和保护主义的抬头威胁着欧盟的经济安全，并削弱了其在人工智能和清洁技术等技术领域的发展。</p><p>欧盟面临着美国巨额补贴吸引投资以及中国对其所依赖的新技术供应链的主导地位带来的新挑战。</p><p>根据草案结论，欧盟领导人将制定九点计划，包括深化单一市场、创建资本市场和能源联盟。</p><p>最大的问题是欧盟的行动是否言行一致。 资本市场联盟的计划可以追溯到十年前，该计划可以释放双重转型所需的私人资金，但由于欧盟成员国不想放弃对国家金融规则的控制而陷入停滞。</p><p>中国欧盟商会主席彦辞警告，随着保护主义浪潮高涨，中国和欧洲面临“慢动作火车事故”，双方之间的贸易摩擦有可能演变成一场全面的贸易战。</p><p>彦辞4月17日在出席中国欧盟商会华南分会的一次会议时说，尽管中国和欧洲对彼此的一些贸易担忧是合理的，但如果中欧领导人不加强对话，就可能出现无益的脱钩。</p><p>彦辞说，欧洲不能接受构成欧洲工业基础的产业，因价格过高被挤出市场的事实，“那时贸易就成为一个安全问题，我认为这在中国可能还没有得到充分的重视”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtD.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E7%25AB%259E%25E4%25BA%2589%25E5%258A%259B%25E8%2590%25BD%25E5%2590%258E%25E7%25BE%258E%25E4%25B8%25AD-%25E6%25AC%25A7%25E7%259B%259F27%25E5%259B%25BD%25E5%2585%25B1%25E5%2595%2586%25E5%25AF%25B9%25E7%25AD%2596&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96%20-%20https%3A%2F%2Frfi.my%2FAWtD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96%20-%20https%3A%2F%2Frfi.my%2FAWtD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtD.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>18/04/2024 - 22:36</div><img src="https://s.rfi.fr/media/display/c27b141e-fccf-11ee-a8c2-005056bf30b7/w:1280/p:16x9/2024-04-17T144304Z_1281641736_RC2987ATK3R3_RTRMADP_3_UKRAINE-CRISIS-ATTACK-CHERNIHIV.JPG"><p><strong>乌克兰18日说，其部队已袭击被吞并的克里米亚半岛上一座大型俄罗斯机场，摧毁大批军事装备。        </strong></p><div><p>据法新社报导，这次袭击发生在17日凌晨，地点在赞科伊（Dzhankoi）附近的一座空军基地，这座空军基地位于莫斯科于2014年占领的克里米亚半岛北部。</p><p>乌克兰军事情报部门说，这次行动很成功，破坏雷达和防空系统和其他目标。 情报部门说：正在查明被摧毁或损坏的敌方航空器数量，以及俄罗斯占领军伤亡人数。</p><p>乌克兰社交媒体前一天曾经流传了据称显示机场爆炸和警报声的视频，但基辅并没有立即发表评论。 乌克兰总统泽连斯基随后在晚间演说中证实他的部队发动了这次袭击，并感谢军方“正确的打击占领者。</p><p><strong>俄军17日空袭乌北部城市 死亡增至 18人 另有78人受伤</strong></p><p>另据中央社18日的综合报导：俄罗斯军队17日空袭了乌克兰北部城市切尔尼戈夫（Chernihiv），期间有3枚导弹击中市中心，乌方官员18日表示，这波攻击造成的死亡人数已升至18人，还有78人受伤。</p><p>路透社报导还说，17日俄军袭击破坏了切尔尼戈夫市的民用基础设施，这是俄罗斯近几周来发动的最致命空袭，乌克兰高层官员也呼吁各国提供更多防空支援。 乌克兰切尔尼戈夫州州长曹斯（Vyacheslav Chaus）在通讯软体Telegram发文写道，搜救行动已经在今天早上结束。</p><p>俄罗斯全面侵略乌克兰的战争已进入第3年，俄国当局否认在这场战争中锁定平民发动攻击。 但切尔尼戈夫代理市长洛马柯（Oleksandr Lomako）17日向当地电视台表示：不幸的是，俄罗斯持续向平民和民用基础设施发动恐怖攻击，针对切尔尼戈夫的袭击再次证实了这 一点。</p><p><strong>布林肯4月23日前往中国访问4天</strong></p><p>此外，美国政治新闻网Politico报导，据1位驻华盛顿外交官和3位了解布林肯行程计画的美国官员透露，布林肯将 在4月23日启程前往中国，进行为期4天的访问。 所有人都被要求匿名，因为他们无权公开谈论这次旅行。 这是布林肯自去年6月以来第二次访问中国。</p><p>美国之音18日报导，美国国务院发言人米勒（Matthew Miller）近日表示，布林肯在访中期间预计将提出美国对于北京正在帮助俄罗斯建立国防工业基础，以延续乌克兰战争的关切。 自俄罗斯在2022年2月全面入侵乌克兰以来，美国就警告中国不要帮助莫斯科的战争行动。</p><p>据华尔街日报近日报导，美国官员称，中国在俄乌战争关键阶段帮助俄国恢复军工生产，为莫斯科提供光学、微电子、无人机发动机和其他军民两用材料，让俄国得以显著增强战场能力。 美方官员私下指出，俄国重振军工产能的速度快于他们预期，可能就是得利于这种外援。 随后中国驻美国大使馆发言人刘鹏宇否认，指中国不是乌克兰危机的制造者或当事方；中方一直在支持政治解决方面发挥建设性作用。 刘鹏宇强调，中国没有向（冲突）任何一方提供武器，中国和俄罗斯之间的正常贸易不应受到干涉和限制。 他说，中国不站在任何一边，并要求美方不要干扰北京和莫斯科之间的正常关系。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWt1.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E7%25A7%25B0%25E6%2588%2590%25E5%258A%259F%25E8%25A2%25AD%25E5%2587%25BB%25E5%2585%258B%25E9%2587%258C%25E7%25B1%25B3%25E4%25BA%259A%25E4%25BF%2584%25E6%259C%25BA%25E5%259C%25BA-%25E4%25BF%2584%25E5%2586%259B%25E7%25A9%25BA%25E8%25A2%25AD%25E4%25B9%258C%25E5%258C%2597%25E9%2583%25A8%25E5%259F%258E%25E5%25B8%2582&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%20-%20https%3A%2F%2Frfi.my%2FAWt1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82%20-%20https%3A%2F%2Frfi.my%2FAWt1.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWt1.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E4%B9%8C%E5%85%8B%E5%85%B0%E7%A7%B0%E6%88%90%E5%8A%9F%E8%A2%AD%E5%87%BB%E5%85%8B%E9%87%8C%E7%B1%B3%E4%BA%9A%E4%BF%84%E6%9C%BA%E5%9C%BA%20%E4%BF%84%E5%86%9B%E7%A9%BA%E8%A2%AD%E4%B9%8C%E5%8C%97%E9%83%A8%E5%9F%8E%E5%B8%82&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
