--- a/articles/rfi/999962.md
+++ b/articles/rfi/999962.md
@@ -1,5 +1,5 @@
 <!--1713476702000-->
-[前中国央行副行长范一飞涉贿受审](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20240418-%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1)
+[竞争力落后美中    欧盟27国共商对策](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20240418-%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD-%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96)
 ------
 
-<div>18/04/2024 - 17:14</div><img src="https://s.rfi.fr/media/display/f3fb03a4-0d6f-11ea-b03f-005056bfe576/w:1280/p:16x9/2011-08-11T800-CHINA-YUAN-MIDDAY_0.JPG"><p><strong>遭指“靠金融吃金融”的前中国人民银行（中国央行）副行长范一飞，被控自1993年起，29年内非法收受财物共计折合人民币3.86亿余元。湖北省黄冈市中级人民法院18日公开审理范一飞受贿一案。        </strong></p><div><p>据中央社今天引述中国官方消息，湖北省黄冈市人民检察院起诉指控，1993年至2022年，范一飞利用在前中国人民建设银行信托投资公司任职，在中国建设银行官至副行长，担任中国投资有限责任公司副总经理兼上海银行董事长，及中国人民银行党委委员、副行长等职务上的便利，透过其他国家工作人员职务上的行为，为有关单位和个人在贷款融资、业务承揽、工作调动等事项上提供帮助，直接或者通过其特定关系人非法收受财物共计折合3.86亿余元。</p><p>消息说，范一飞当庭表示认罪悔罪。</p><p>法庭宣布择期宣判。</p><p>北京青年报旗下新媒体“政知见”指出，范一飞长期在金融系统任职，2015年调往中国人行担任副行长时，是当时央行领导班子中最年轻的成员。2022年11月，范一飞在任上被查落马。2023年5月，他被开除党籍和公职。</p><p>据中共中央纪委国家监委的通报指出，范一飞为官不廉，毫无法纪底线且胆大妄为，靠金融吃金融、以钱生钱，长期以“投资”为名大搞权钱交易，利用职务便利为他人在贷款融资、企业经营等方面谋利，并非法收受巨额财物。</p><p>该报道称，今年1月上旬，中国央视播出年度反腐大片“持续发力纵深推进”，范一飞还出镜忏悔。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWqH.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25B8%25AD%25E5%259B%25BD%2F20240418-%25E5%2589%258D%25E4%25B8%25AD%25E5%259B%25BD%25E5%25A4%25AE%25E8%25A1%258C%25E5%2589%25AF%25E8%25A1%258C%25E9%2595%25BF%25E8%258C%2583%25E4%25B8%2580%25E9%25A3%259E%25E6%25B6%2589%25E8%25B4%25BF%25E5%258F%2597%25E5%25AE%25A1&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1%20-%20https%3A%2F%2Frfi.my%2FAWqH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1%20-%20https%3A%2F%2Frfi.my%2FAWqH.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWqH.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E5%89%8D%E4%B8%AD%E5%9B%BD%E5%A4%AE%E8%A1%8C%E5%89%AF%E8%A1%8C%E9%95%BF%E8%8C%83%E4%B8%80%E9%A3%9E%E6%B6%89%E8%B4%BF%E5%8F%97%E5%AE%A1&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 22:57</div><img src="https://s.rfi.fr/media/display/0d312ef6-fd9a-11ee-a885-005056bfb2b6/w:1280/p:16x9/AP24109325782154.jpg"><p><strong></strong></p><div><p>莱塔的报告提出了一系列改善内部市场运作的措施，包括进一步整合电信、能源和金融部门，否则欧盟将注定衰落。随着欧洲议会选举临近，这个问题有望成为未来几个月欧洲政治议程的核心。</p><p>欧盟委员会主席乌苏拉·冯德莱恩表示，“我们联盟的竞争力和单一市场有坚实的基础，我们现在必须将其转变为长期可持续增长”。</p><p>德国官员认为，欧盟必须确保欧洲人不是简单的“其他地方生产的数字技术和服务的消费者”，并呼吁采取具体行动刺激资本获取、降低能源成本、解决熟练劳动力短缺问题并加强贸易联系。</p><p>提交了一份长达147页的报告后，恩里科·莱塔（Enrico Letta）在新闻发布会上表示，“这是最后一次机会，也是最后一个开放的窗口。”</p><p>报告称，地缘政治紧张局势和保护主义的抬头威胁着欧盟的经济安全，并削弱了其在人工智能和清洁技术等技术领域的发展。</p><p>欧盟面临着美国巨额补贴吸引投资以及中国对其所依赖的新技术供应链的主导地位带来的新挑战。</p><p>根据草案结论，欧盟领导人将制定九点计划，包括深化单一市场、创建资本市场和能源联盟。</p><p>最大的问题是欧盟的行动是否言行一致。 资本市场联盟的计划可以追溯到十年前，该计划可以释放双重转型所需的私人资金，但由于欧盟成员国不想放弃对国家金融规则的控制而陷入停滞。</p><p>中国欧盟商会主席彦辞警告，随着保护主义浪潮高涨，中国和欧洲面临“慢动作火车事故”，双方之间的贸易摩擦有可能演变成一场全面的贸易战。</p><p>彦辞4月17日在出席中国欧盟商会华南分会的一次会议时说，尽管中国和欧洲对彼此的一些贸易担忧是合理的，但如果中欧领导人不加强对话，就可能出现无益的脱钩。</p><p>彦辞说，欧洲不能接受构成欧洲工业基础的产业，因价格过高被挤出市场的事实，“那时贸易就成为一个安全问题，我认为这在中国可能还没有得到充分的重视”。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWtD.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E6%25AC%25A7%25E6%25B4%25B2%2F20240418-%25E7%25AB%259E%25E4%25BA%2589%25E5%258A%259B%25E8%2590%25BD%25E5%2590%258E%25E7%25BE%258E%25E4%25B8%25AD-%25E6%25AC%25A7%25E7%259B%259F27%25E5%259B%25BD%25E5%2585%25B1%25E5%2595%2586%25E5%25AF%25B9%25E7%25AD%2596&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96%20-%20https%3A%2F%2Frfi.my%2FAWtD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96%20-%20https%3A%2F%2Frfi.my%2FAWtD.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWtD.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E7%AB%9E%E4%BA%89%E5%8A%9B%E8%90%BD%E5%90%8E%E7%BE%8E%E4%B8%AD%20%20%20%20%E6%AC%A7%E7%9B%9F27%E5%9B%BD%E5%85%B1%E5%95%86%E5%AF%B9%E7%AD%96&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
