--- a/articles/rfi/999968.md
+++ b/articles/rfi/999968.md
@@ -1,5 +1,5 @@
 <!--1713444302000-->
-[巴勒斯坦再次要求联合国接纳其会员国地位 - 要闻解说](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E8%A7%A3%E8%AF%B4/20240418-%E5%B7%B4%E5%8B%92%E6%96%AF%E5%9D%A6%E5%86%8D%E6%AC%A1%E8%A6%81%E6%B1%82%E8%81%94%E5%90%88%E5%9B%BD%E6%8E%A5%E7%BA%B3%E5%85%B6%E4%BC%9A%E5%91%98%E5%9B%BD%E5%9C%B0%E4%BD%8D)
+[法国总理阿塔尔上任一百天了 政绩如何？ - 法国报纸摘要](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E6%B3%95%E5%9B%BD%E6%8A%A5%E7%BA%B8%E6%91%98%E8%A6%81/20240418-%E6%B3%95%E5%9B%BD%E6%80%BB%E7%90%86%E9%98%BF%E5%A1%94%E5%B0%94%E4%B8%8A%E4%BB%BB%E4%B8%80%E7%99%BE%E5%A4%A9%E4%BA%86-%E6%94%BF%E7%BB%A9%E5%A6%82%E4%BD%95)
 ------
 
-<div>18/04/2024 - 13:15</div><img src="https://s.rfi.fr/media/display/e2ae9be6-3b5d-11ed-99f8-005056a9a7b9/w:1280/p:16x9/2022-09-23T155722Z_818034669_RC23NW9N0NOM_RTRMADP_3_UN-ASSEMBLY.JPG"><p><strong>以哈冲突爆发已超过半年，在以色列继续对加沙地带展开猛烈攻势的背景下，联合国安理会周四举行会议，要求其接纳新会员国委员会审查巴勒斯坦权力机构成为联合国正式会员国申请，并对相关决议草案进行投票。这是对巴勒斯坦权力机构于4月初提出的相关要求做出的回应。                    </strong></p><div><p>巴勒斯坦曾在2011年向联合国提交获得该机构正式会员国资格的申请。尽管获得了148个国家的支持，成为联合国正式成员国的愿望却落了空。2012年，联合国大会投票后，巴勒斯坦与梵蒂冈一样晋升为“非会员观察员国”地位。</p><p>13年后的今天，一直担任巴勒斯坦驻联合国大使的里亚德-曼苏尔（Riyad Mansour）再次提交要求承认巴勒斯坦主权国家以及巴勒斯坦获得联合国正式成员国的诉求。这一诉求来自总部设在拉姆安拉的巴勒斯坦权利机构及其主席马哈茂德-阿巴斯。</p><p>巴勒斯坦权力机构位于部分被以色列占领的西岸地区；不过哈马斯2007年掌权后，巴勒斯坦权力机构的治理被逐出加沙地带。</p><p>去年10月，哈马斯在当地发起的突然袭击以及以色列国防军对加沙地带的大规模军事行动，引发了全球的愤怒，改变了整体局势。巴勒斯坦驻联合国特使表示：巴勒斯坦的要求只是与其他民族和国家一样，在国际社会中占据应有的地位。目前已有超过3万3千名巴勒斯坦人在以色列对加沙的战争中丧生，被围困的巴勒斯坦领土大部分地区处于几近饥荒的状态。</p><p>4月2日，曼苏尔代表阿巴斯致函联合国秘书长古特雷斯，要求他“重新关注”巴勒斯坦2011年提出的联合国候选国资格。随后安理会在4月8日讨论了相关问题并委托一个委员会审查新成员的候选资格，该委员会于9日和11日召开了两次会议。一周后的4月15日，讨论结果揭晓，按照协商一致原则运作的这一委员会未能达成共识，三分之一的国家拒绝支持拉姆安拉。16日晚间，巴勒斯坦驻联合国代表团在其X 平台账户上发表了阿拉伯国家集团在联合国发表的声明，要求联合国安理会“接受巴勒斯坦国为联合国会员国”。阿拉伯国家集团声明指出：呼吁所有安理会成员国投票赞成阿尔及利亚代表阿拉伯集团周二晚上提交的决议草案，呼吁理事会成员至少不要阻碍这一重要举措”。</p><p>据报道，此一草案极有可能获得安理会15国理事国中9个理事国的支持。但最重要的是，需获得由中、美、法、英、俄这5个常任理事国的一致通过方可生效，任何一个常任理事国的否决均可将此一提案扼杀在萌芽中。而美国则是最大障碍。另外，即使此一提案在理事会获得通过，仍需由联合国大会以三分之二多数做出最终决定。</p><p>长期以来，联合国安理会一直支持以色列和巴勒斯坦建立两个在安全和公认的边界内毗邻共存的设想。巴勒斯坦人希望在约旦河西岸、东耶路撒冷和加沙地带的土地上建立自己的国家。在1967年的战争中，这些地区全部被以色列占领。</p><p>实际上，自上个世纪90年代初，以色列和巴勒斯坦权力机构签署《奥斯陆协议》以来，建立巴勒斯坦国的进程几乎没有任何进展，美国的立场也丝毫没有改变。</p><p>美国驻联合国大使格林菲尔德周三在首尔举行的新闻发布会上表示，她不认为阿尔及利亚提出的决议草案有助于达成巴以冲突的两国方案。华盛顿曾在此前表示：建立独立的巴勒斯坦国应该通过以色列和巴勒斯坦人之间的直接谈判而不是在联合国进行。</p><p>一位外交人士透过PassBlue网站披露：如果今天安理会的投票不尽如巴勒斯坦之意，作为安慰，巴勒斯坦可获得“增强的”观察员地位，这意味“主权”却非“国家实体”，其候选资格可获安理会定期审查。</p><p>另外，根据联合国大会2022年12月的审议要求，联合国所属国际法院今年2月19日开始在荷兰海牙举行听证会，讨论以色列占领巴勒斯坦人居住地带带来的法律后果。15位法官应在6个月内公布“不具约束力”的咨询意见。虽然此举不直接涉及以色列目前在加沙的军事行动，也不具有法律约束力，但有可能在政治上对以色列造成压力，并将具有“重大法律意义和道德权威”。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E6%B5%81%E8%8A%B3/" title="流芳">流芳</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
+<div>18/04/2024 - 14:03</div><img src="https://s.rfi.fr/media/display/b0a32400-f006-11ee-8629-005056a90284/w:1280/p:16x9/2024-03-27T202323Z_336472124_RC2OP6A8S2QK_RTRMADP_3_FRANCE-UNEMPLOYMENT-ATTAL.JPG"><p><strong>周四（4月18号）是法国总理加布里埃尔-阿塔尔被任命100天，各报均对这个主题有大幅报道和分析。根据咨询公司Odoxa-Backbone Consulting 为《费加罗报》所做的最新民意调查，法国人虽然对总理的行为持批评态度，但对他的个人魅力表示认可。                    </strong></p><div><p>根据这份民调， 48%的法国人认为他是一位好总理，但他的形象在多个方面都在下滑：68%的法国人认为他充满活力，下降两个百分点，但认为他有魅力或贴近民众关切的人分别为45%和44%, 均有所下降。</p><p>在他入职后的总政策演讲中，新总理曾定下了基调：包括"重塑法国"、"取消对员工的补贴"、创造住房 "供应冲击"、"去行政官僚化"......在抵达马蒂尼翁一百天后，现在到了阿塔尔做一个小总结的时候了。各报自然对他的政策亮点进行了点评和期望。</p><p><strong>青年暴力和教育问题</strong></p><p>右翼《费加罗报》指出，加布里埃尔-阿塔尔（Gabriel Attal）希望在本周四纪念他上任100天之际，利用他在马蒂尼翁的权威，他要前往埃松省（Essonne）的维利-沙蒂永（Viri-Châtillon），之所以选择这个城市，是因为十天前在该市的一个中学校门口，发生了一名15岁的少年被人殴打致死而震惊法国舆论的惨案。阿塔尔将发表题为"“关于共和国核心权力”的演讲，试图消除人们的疑虑。但尽管这位前教育部长似乎曾带来了典范式的转变，但在世俗主义受到质疑的背景下，青少年暴力事件数量仍在令人担忧地增加。</p><p>左翼《解放报》指出，自1月9日上任以来，总理一直在应对动荡的预算形势和国民议会中脆弱的相对多数。为了坚持自己的立场，政府首脑寄希望于恢复权威，尤其是在青年和教育问题上。</p><p>《费加罗报》指出，糟糕的政府政绩和公共财政的急剧恶化，正在为他作为政府首脑的第一步成果蒙上阴影，尽管在这些问题上，他此前的声望一直很高。阿塔尔意识到自己在国民议会中并不占绝对多数，因此自上任以来一直没有提交任何重要立法。这让他的一些部下感到不耐烦，一些人呼吁 "重新启动立法机器"。为了回应对总理言行不一的指责，各部长办公室于周二晚间接到指示，要求他们准备视觉资料，在社交网络上列出总理的成就。</p><p><strong>空洞的一百天</strong></p><p>《解放报》的一篇评论更指出，加布里埃尔-阿塔尔在总理府的一百天，是空洞的一百天：既不左，也不由，什么都不是。总统马克龙的第四任总理上任三个月后，其沟通方式虽然花样多但均短视。作者认为这是马克龙主义没有指南针的表现。如果相信阿塔尔的演讲和他的执政艺术，那么他的逻辑应该是努力与右派共同执政，以获得绝对多数。但是，如果没有事先达成的政治协议，没有足够自信的道德或个人权威，阿塔尔将一事无成。他甚至无法在欧洲大选中为复兴党推出名单开展有效的竞选活动。他的出现只不过是作为一种回应的尝试，旨在对抗在欧洲议会选举上占据投票意向领先的极右翼国民联盟的带头人巴尔德拉（Jordan Bardella<em> ) </em>的效应。</p><p>这篇充满批评语气的文章最后写道：没有多数，没有权威，没有明确的政治定位，没有改革计划来安排未来几个月的工作，阿塔尔除了努力避免错过奥运会的组织工作，以及带着矛盾的双重目标：既不吓唬评级机构，以免我们的债务利率飙升，又不冒社会危机的风险，很难看出他还有什么作用。在欧洲大选可能失败后，这样一个政治团队如何能够团结一致？</p><p><strong>欧洲议会选举的挑战</strong></p><p>对于加布里埃尔-阿塔尔的政治未来，右派的《费加罗报》似乎也不看好，指出，他最坏的打算是什么？在马蒂尼翁的日子不会长久，而议会提出谴责动议的可能性正日益激化右翼队伍，并可能拉拢左翼和新军。总理深知这一点：从 7 月 9 日起，即欧洲大选一个月后，也就是他上任六个月后，国家元首必须按照传统授予他国家功勋大十字勋章。那么，至少他还有一百天的任期。</p><p>经济类报纸《回声报》同一主题指出，在总理府马提翁执政一百天后，加布里埃尔-阿塔尔着手解决 "权力削弱 "问题。周四的讲话要回应公众对安全的强烈要求。马克龙总统在奥林匹克运动会开幕前一百天，就法国人关心的另一个问题--奥林匹克运动会的安全问题作出了保证。</p><p>该报指出，面对极右翼的国民联盟的攻势，执政党多数派仍未找到扭转趋势的良方。妖魔化不再奏效，谴责国民联盟议员在欧洲议会的记录或审查他们的提案也不再奏效。根据《回声报》（Les Echos）和 古典广播电台（Radio classique）委托进行的 EuroTrack 民意调查，对安全问题讨论的支持率正在上升，在本次议会大选中位列第三，仅次于购买力和物价上涨议题。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%89%BE%E7%B1%B3/" title="艾米">艾米</a></div></div></div></div>
