--- a/articles/rfi/999983.md
+++ b/articles/rfi/999983.md
@@ -1,5 +1,5 @@
-<!--1713393902000-->
-[阿联酋遭遇最大降雨   机场大乱   学校停课一周](https://www.rfi.fr/cn/%E4%BA%9A%E6%B4%B2/20240417-%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8-%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1-%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8)
+<!--1713406501000-->
+[拜登要保护美国钢铁和造船业免受中国不公平竞争影响 - 要闻分析](https://www.rfi.fr/cn/%E4%B8%93%E6%A0%8F%E6%A3%80%E7%B4%A2/%E8%A6%81%E9%97%BB%E5%88%86%E6%9E%90/20240417-%E6%8B%9C%E7%99%BB%E8%A6%81%E4%BF%9D%E6%8A%A4%E7%BE%8E%E5%9B%BD%E9%92%A2%E9%93%81%E5%92%8C%E9%80%A0%E8%88%B9%E4%B8%9A%E5%85%8D%E5%8F%97%E4%B8%AD%E5%9B%BD%E4%B8%8D%E5%85%AC%E5%B9%B3%E7%AB%9E%E4%BA%89%E5%BD%B1%E5%93%8D)
 ------
 
-<div>17/04/2024 - 22:42</div><img src="https://s.rfi.fr/media/display/fb3ca3e6-fcfa-11ee-93d6-005056a97e36/w:1280/p:16x9/2000006893198.png"><p><strong></strong></p><div><p>这场降雨淹没了街道，连根拔起棕榈树，摧毁了建筑外墙。自1949年有记录以来，这个中东国家从未见过这样的降雨。在热门旅游目的地迪拜，航班被取消，交通中断，学校关闭至少一个星期。</p><p>根据机场的气象观测，周二仅12小时内就有100毫米（近4英寸）的降雨量。根据联合国的数据，这大约是迪拜全年的降雨量。</p><p>雨下得又大又快，洪水上涨，道路变成河流，有些驾驶人被迫弃车而逃。</p><p>此次降雨与穿越阿拉伯半岛并横跨阿曼湾的大型风暴系统有关。同样的系统也给附近的阿曼和伊朗东南部带来异常潮湿的天气。</p><p>阿曼国家紧急管理委员会表示，大雨引发的山洪爆发至少造成18人死亡。据阿曼国家通讯社报导，伤亡者包括学童。</p><p>阿联酋媒体和社群媒体帖文显示，暴雨对该国部分地区造成了严重破坏，包括道路倒塌和房屋被水淹没。</p><p>周二的社群媒体帖文显示，道路和停车场被洪水淹没，一些车辆完全被淹没。穿过迪拜的12车道高速公路谢赫扎耶德路（Sheikh Zayed Road）被部分淹没，导致人们陷入长达数小时的交通堵塞中。</p><p>周三，试图通过公路进入迪拜市中心的人们被困在高速公路上。由于道路堵塞，一些计程车司机拒绝载送通勤者。其中一些受困者从国外来到迪拜，参加定于下周初举行的世界区块链高峰会（World Blockchain Summit）。</p><p> </p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div>分享 :</div><div><a href="https://www.facebook.com/dialog/share?app_id=113191652055439&amp;href=https%3A%2F%2Frfi.my%2FAWgy.F&amp;redirect_uri=https%3A%2F%2Fwww.rfi.fr%2Fcn%2F%25E4%25BA%259A%25E6%25B4%25B2%2F20240417-%25E9%2598%25BF%25E8%2581%2594%25E9%2585%258B%25E9%2581%25AD%25E9%2581%2587%25E6%259C%2580%25E5%25A4%25A7%25E9%2599%258D%25E9%259B%25A8-%25E6%259C%25BA%25E5%259C%25BA%25E5%25A4%25A7%25E4%25B9%25B1-%25E5%25AD%25A6%25E6%25A0%25A1%25E5%2581%259C%25E8%25AF%25BE%25E4%25B8%2580%25E5%2591%25A8&amp;locale=zh_CN" target="_blank" rel="noopener nofollow"><span></span></a><a href="whatsapp://send?text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8%20-%20https%3A%2F%2Frfi.my%2FAWgy.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://web.whatsapp.com/send?text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8%20-%20https%3A%2F%2Frfi.my%2FAWgy.W" target="_blank" rel="noopener nofollow"><span></span></a><a href="https://x.com/intent/tweet?url=https%3A%2F%2Frfi.my%2FAWgy.X&amp;via=RFI_Cn&amp;related=RFI_Cn&amp;text=%E9%98%BF%E8%81%94%E9%85%8B%E9%81%AD%E9%81%87%E6%9C%80%E5%A4%A7%E9%99%8D%E9%9B%A8%20%20%20%E6%9C%BA%E5%9C%BA%E5%A4%A7%E4%B9%B1%20%20%20%E5%AD%A6%E6%A0%A1%E5%81%9C%E8%AF%BE%E4%B8%80%E5%91%A8&amp;lang=zh-cn" target="_blank" rel="noopener nofollow"><span></span></a><span data-root-share><share-button v-on:open="openModal"></share-button><share-modal v-if="displayModal" v-on:close="closeModal"></share-modal></span></div></div>
+<div>17/04/2024 - 21:00</div><img src="https://s.rfi.fr/media/display/73a8772a-f6f1-11ee-b8cd-005056bfb2b6/w:1280/p:16x9/2024-04-10T023842Z_2041466065_RC2VT6ATFRE2_RTRMADP_3_ISRAEL-PALESTINIANS-BIDEN.JPG"><p><strong>正在进行竞选连任的美国总统拜登17日表示将以对抗“不公平竞争”为由，敦促对中国钢铁和铝征收3倍关税。美国贸易代表办公室（USTR）也在同一天宣布将对中国在造船、海运和物流领域的贸易行为展开调查，以回应美国5个工会近期的请愿。                    </strong></p><div><p>拜登和他的竞选对手特朗普都在争夺至关重要的蓝领选民，并承诺将重振美国制造业。特朗普曾发誓: 要对中国等国家增加关税。拜登则在17日对匹兹堡的钢铁工人发表讲话，公布多项取悦钢铁工人的措施，包括将特朗普政府对中国钢铁产品征收的7.5%的关税提高到25%、向墨西哥施压禁止中国转道墨西哥向美国销售钢铁及铝产品，同时对中国在造船、海事及物流领域的贸易做法启动可能导致更高关税的反倾销调查。</p><p>白宫发表声明说：“中国对其国内钢铁和铝业的政策和补贴，意味着高品质的美国产品被以人为压低价格的中国替代品所削弱，而中国替代品生产过程的碳排放更高。”一名美国资深官员告诉媒体，中国占全球钢铁产量的一半，并以远低于美国钢铁的价格对外出口。</p><p>拜登总统宣布的对中国钢铁和铝产品提高征收关税，还有待于美国贸易代表办公室在完成对特朗普总统时期的关税进行审核后的批准。美国贸易代表戴琪（Katherine Tai）4月16日在众议院表示，她的办公室“非常接近于完成”对中国关税的审核。</p><p>据白宫17日发表的情况说明书，拜登政府宣布采取新行动，是为了保护美国钢铁和造船业免受中国不公平行为的影响。有以下五大理由：</p><p>第一：美国工人继续面临来自中国进口钢铁和铝产品的不公平竞争，这些产品是世界上排放最密集的产品之一。</p><p>第二，拜登总统上任以来，商务部已对钢铁相关产品征收30多项反倾销和反补贴税，还对中国出口商的反竞争行为以及中国等国家规避贸易规则的行为进行了近 27 项调查。</p><p>第三，拜登总统正在指示他的高级团队与墨西哥合作，共同防止中国和其他国家逃避从墨西哥进口到美国的钢铝关税。 </p><p>第四，美国贸易代表正在对中国在造船、海事和物流领域的不公平贸易行为发起调查。这项调查是在美国钢铁工人联合会（USW）和其他四个工会提交请愿书之后进行的。</p><p>第五，拜登总统正在投资清洁的美国制造钢铁。今天的公告建立在政府对绿色钢铁生产的承诺之上。</p><p>美联社评论说，拜登总统提高对中国钢铁产品进口关税的举动，反映了拜登政府的国际贸易政策，与其争取关键摇摆州选票的努力出现交集的情况。不过，白宫坚称，这更是为了保护美国制造业免受中国不公平贸易做法之害，而不仅仅是为了激发工会成员的投票热情。</p><p>有分析表示，白宫此举可能会激怒北京中南海。另外，此举的经济风险还在于：对中国钢铁及铝产品征收更高关税，将可能使钢铁与铝产品成本价格升高，也将提升汽车、建筑材料和其他关键消费者产品的成本和价格。尽管美国的高通胀已是拜登总统的政治包袱，但拜登总统转向贸易保护主义，更是与其竞争对手特朗普的政策看齐。而所谓的301条款调查则是当年特朗普政府在与北京当局贸易战中的主要工具，用来证明征收关税的合理性。</p><div data-selfpromo-newsletter></div><div data-selfpromo-app></div></div><div><div><div><div><span>作者：</span><a href="/cn/%E4%BD%9C%E8%80%85/%E8%82%96%E6%9B%BC/" title="肖曼">肖曼</a></div></div></div></div><br><hr><div>获取更多RSS：<br><a href="https://feedx.net" style="color:orange" target="_blank">https://feedx.net</a> <br><a href="https://feedx.run" style="color:orange" target="_blank">https://feedx.run</a><br></div>
