--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-19 [以伊冲突升级：以色列准备多线作战？](/articles/dw/1025853.md)
+
 4-19 [2024世界新闻摄影奖：痛苦、哀伤与感人的瞬间](/articles/dw/1025854.md)
 
 4-19 [布林肯指责北京帮助俄罗斯重振国防工业](/articles/dw/1025855.md)
@@ -598,6 +600,4 @@
 3-25 [“网暴“风波中 钟睒睒登胡润排行榜中国“首富“](/articles/dw/1026151.md)
 
 3-25 [欧洲及德国议会代表团访问台湾](/articles/dw/1026152.md)
-
-3-25 [門開一半?中國發展論壇喊開放卻少總理座談](/articles/dw/1026153.md)
 
